--- a/lang/bn.json
+++ b/lang/bn.json
@@ -439,7 +439,6 @@
     "For:": "জন্য:",
     "For advice": "উপদেশের জন্য",
     "Forbidden": "নিষিদ্ধ",
-    "Forgot password?": "পাসওয়ার্ড ভুলে গেছেন?",
     "Forgot your password?": "আপনার পাসওয়ার্ড ভুলে গেছেন?",
     "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "আপনার পাসওয়ার্ড ভুলে গেছেন? সমস্যা নেই, শুধু আমাদের আপনার ই-মেইল ঠিকানা জানান এবং আমরা আপনাকে একটি পাসওয়ার্ড রিসেট লিঙ্ক ইমেইল করবো, সেটি আপনাকে একটি নতুন পাসওয়ার্ড নির্বাচন করার অনুমতি দেবে।",
     "For your security, please confirm your password to continue.": "আপনার নিরাপত্তার জন্য, অনুগ্রহ করে আপনার পাসওয়ার্ড নিশ্চিত করে চালিয়ে যান৷",
@@ -699,7 +698,7 @@
     "per/per": "প্রতি/প্রতি",
     "Permanently delete this team.": "স্থায়ীভাবে এই দল মুছে ।",
     "Permanently delete your account.": "স্থায়ীভাবে আপনার অ্যাকাউন্ট মুছে দিন ।",
-    "Permission for :name": ":name এর জন্য অনুমতি",
+    "Permission for :name": ":Name এর জন্য অনুমতি",
     "Permissions": "অনুমতি",
     "Personal": "ব্যক্তিগত",
     "Personalize your account": "আপনার অ্যাকাউন্ট ব্যক্তিগতকৃত",
@@ -747,8 +746,8 @@
     "Profile": "প্রোফাইল",
     "Profile and security": "প্রোফাইল এবং নিরাপত্তা",
     "Profile Information": "প্রোফাইল তথ্য",
-    "Profile of :name": ":name এর প্রোফাইল",
-    "Profile page of :name": ":name এর প্রোফাইল পৃষ্ঠা",
+    "Profile of :name": ":Name এর প্রোফাইল",
+    "Profile page of :name": ":Name এর প্রোফাইল পৃষ্ঠা",
     "Pronoun": "সর্বনাম",
     "Pronouns": "সর্বনাম",
     "Pronouns are basically how we identify ourselves apart from our name. It’s how someone refers to you in conversation.": "সর্বনামগুলি মূলত কীভাবে আমরা আমাদের নাম ছাড়াও নিজেদেরকে চিহ্নিত করি। কথোপকথনে কেউ আপনাকে কীভাবে উল্লেখ করে।",
@@ -782,7 +781,7 @@
     "Religions": "ধর্মসমূহ",
     "Religions is all about faith.": "ধর্ম মানেই বিশ্বাস।",
     "Remember me": "আমাকে মনে রাখুন",
-    "Reminder for :name": ":name এর জন্য অনুস্মারক",
+    "Reminder for :name": ":Name এর জন্য অনুস্মারক",
     "Reminders": "অনুস্মারক",
     "Reminders for the next 30 days": "পরবর্তী 30 দিনের জন্য অনুস্মারক",
     "Remind me about this date every year": "প্রতি বছর এই তারিখ সম্পর্কে আমাকে মনে করিয়ে দিন",
@@ -1095,7 +1094,6 @@
     "Title": "শিরোনাম",
     "to": "প্রাপক",
     "To finish enabling two factor authentication, scan the following QR code using your phone's authenticator application or enter the setup key and provide the generated OTP code.": "দুটি ফ্যাক্টর প্রমাণীকরণ সক্ষম করা শেষ করতে, আপনার ফোনের প্রমাণীকরণকারী অ্যাপ্লিকেশন ব্যবহার করে নিম্নলিখিত QR কোডটি স্ক্যান করুন বা সেটআপ কী লিখুন এবং উৎপন্ন OTP কোড প্রদান করুন ৷",
-    "To finish enabling two factor authentication, scan the following QR code using your phone’s authenticator application or enter the setup key and provide the generated OTP code.": "দুটি ফ্যাক্টর প্রমাণীকরণ সক্ষম করা শেষ করতে, আপনার ফোনের প্রমাণীকরণকারী অ্যাপ্লিকেশন ব্যবহার করে নিম্নলিখিত QR কোডটি স্ক্যান করুন বা সেটআপ কী লিখুন এবং উত্পন্ন OTP কোড প্রদান করুন।",
     "Toggle navigation": "জন্য অনুসন্ধান করুন:",
     "To hear their story": "তাদের গল্প শোনার জন্য",
     "Token Name": "টোকেনের নাম",
@@ -1144,7 +1142,6 @@
     "updated the religion": "ধর্ম আপডেট করা হয়েছে",
     "Update Password": "পাসওয়ার্ড আপডেট করুন",
     "Update your account's profile information and email address.": "আপনার অ্যাকাউন্ট এর প্রোফাইল তথ্য এবং ইমেল ঠিকানা আপডেট করুন ।",
-    "Update your account’s profile information and email address.": "আপনার অ্যাকাউন্টের প্রোফাইল তথ্য এবং ইমেল ঠিকানা আপডেট করুন।",
     "Upload photo as avatar": "অবতার হিসেবে ছবি আপলোড করুন",
     "Use": "ব্যবহার করুন",
     "Use an authentication code": "প্রমাণীকরণ কোড ব্যবহার করো",
@@ -1198,7 +1195,7 @@
     "We’ll send an email to this email address that you will need to confirm before we can send notifications to this address.": "আমরা এই ইমেল ঠিকানায় একটি ইমেল পাঠাব যা এই ঠিকানায় বিজ্ঞপ্তি পাঠানোর আগে আপনাকে নিশ্চিত করতে হবে৷",
     "What happens now?": "এখন কি ঘটছে?",
     "What is the loan?": "ঋণ কি?",
-    "What permission should :name have?": ":name-এর কী অনুমতি থাকা উচিত?",
+    "What permission should :name have?": ":Name-এর কী অনুমতি থাকা উচিত?",
     "What permission should the user have?": "ব্যবহারকারীর কি অনুমতি থাকা উচিত?",
     "Whatsapp": "হোয়াটসঅ্যাপ",
     "What should we use to display maps?": "মানচিত্র প্রদর্শন করতে আমাদের কী ব্যবহার করা উচিত?",
