--- a/lang/fr.json
+++ b/lang/fr.json
@@ -439,7 +439,6 @@
     "For:": "Pour :",
     "For advice": "Pour obtenir des conseils",
     "Forbidden": "Interdit",
-    "Forgot password?": "Mot de passe oublié ?",
     "Forgot your password?": "Mot de passe oublié ?",
     "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "Mot de passe oublié ? Pas de soucis. Veuillez nous indiquer votre adresse e-mail et nous vous enverrons un lien de réinitialisation du mot de passe.",
     "For your security, please confirm your password to continue.": "Par mesure de sécurité, veuillez confirmer votre mot de passe pour continuer.",
@@ -479,7 +478,7 @@
     "Hamster": "Hamster",
     "Have a great day,": "Passe une bonne journée,",
     "he/him": "il/lui",
-    "Hello!": "Bonjour !",
+    "Hello!": "Bonjour !",
     "Help": "Aide",
     "Hi :name": "Salut :name",
     "Hinduist": "Hindouiste",
@@ -563,7 +562,7 @@
     "Life events let you document what happened in your life.": "Les événements de la vie vous permettent de documenter ce qui s’est passé dans votre vie.",
     "Life event types:": "Types d’événements de la vie :",
     "Life event types and categories": "Types et catégories d’événements de la vie",
-    "Life metrics": "Mesures de vie",
+    "Life metrics": "Métrique de vie",
     "Life metrics let you track metrics that are important to you.": "Les métriques de vie vous permettent de suivre les métriques qui sont importantes pour vous.",
     "LinkedIn": "LinkedIn",
     "List of addresses": "Liste des adresses",
@@ -575,7 +574,7 @@
     "Locale default: :value": "Paramètres régionaux par défaut : :value",
     "Log a call": "Enregistrer un appel",
     "Log details": "Détails du journal",
-    "logged the mood": "enregistré l’ambiance",
+    "logged the mood": "a enregistré l’humeur",
     "Log in": "Se connecter",
     "Login": "Connexion",
     "Login with:": "Se connecter avec :",
@@ -634,7 +633,7 @@
     "Move contact": "Déplacer le contact",
     "Muslim": "Musulman",
     "Name": "Nom",
-    "Name of the pet": "Nom de l’animal",
+    "Name of the pet": "Nom de l’animal de compagnie",
     "Name of the reminder": "Nom du rappel",
     "Name of the reverse relationship": "Nom de la relation inverse",
     "Nature of the call": "Nature de l’appel",
@@ -790,10 +789,10 @@
     "Remove": "Supprimer",
     "Remove avatar": "Supprimer l’avatar",
     "Remove cover image": "Supprimer l’image de couverture",
-    "removed a label": "supprimé une étiquette",
-    "removed the contact from a group": "supprimé le contact d’un groupe",
-    "removed the contact from a post": "supprimé le contact d’un message",
-    "removed the contact from the favorites": "supprimé le contact des favoris",
+    "removed a label": "a supprimé une étiquette",
+    "removed the contact from a group": "a supprimé le contact d’un groupe",
+    "removed the contact from a post": "a supprimé le contact d’un message",
+    "removed the contact from the favorites": "a supprimé le contact des favoris",
     "Remove Photo": "Supprimer l’image",
     "Remove Team Member": "Supprimer le membre d’équipe",
     "Rename": "Renommer",
@@ -832,8 +831,8 @@
     "Settings": "Paramètres",
     "Settle": "Régler",
     "Setup": "Configurer",
-    "Setup Key": "Clé de configuration",
-    "Setup Key:": "Clé de configuration :",
+    "Setup Key": "Configurer la clé",
+    "Setup Key:": "Configurer la clé :",
     "Setup Telegram": "Configurer Telegram",
     "she/her": "elle/elle",
     "Shintoist": "Shintoïste",
@@ -873,8 +872,8 @@
     "Switch role": "Changer de rôle",
     "Switch Teams": "Permuter les équipes",
     "Tabs visibility": "Visibilité des onglets",
-    "Tags": "Étiquettes",
-    "Tags let you classify journal posts using a system that matters to you.": "Les étiquettes vous permettent de classer les articles de journaux à l’aide d’un système qui compte pour vous.",
+    "Tags": "Balises",
+    "Tags let you classify journal posts using a system that matters to you.": "Les balises vous permettent de classer les articles de journaux à l’aide d’un système qui compte pour vous.",
     "Taoist": "Taoïste",
     "Tasks": "Tâches",
     "Team Details": "Détails de l’équipe",
@@ -1045,10 +1044,10 @@
     "The section has been deleted": "La rubrique a été supprimée",
     "The section has been updated": "La rubrique a été mise à jour",
     "These people have been invited to your team and have been sent an invitation email. They may join the team by accepting the email invitation.": "Ces personnes ont été invitées à rejoindre votre équipe et ont été prévenues avec un e-mail d’invitation. Ils peuvent rejoindre l’équipe grâce à l’e-mail d’invitation.",
-    "The tag has been added": "L’étiquette a été ajoutée",
-    "The tag has been created": "L’étiquette a été créée",
-    "The tag has been deleted": "L’étiquette a été supprimée",
-    "The tag has been updated": "L’étiquette a été mise à jour",
+    "The tag has been added": "La balise a été ajoutée",
+    "The tag has been created": "La balise a été créée",
+    "The tag has been deleted": "La balise a été supprimée",
+    "The tag has been updated": "La balisee a été mise à jour",
     "The task has been created": "La tâche a été créée",
     "The task has been deleted": "La tâche a été supprimée",
     "The task has been edited": "La tâche a été modifiée",
@@ -1095,7 +1094,6 @@
     "Title": "Titre",
     "to": "à",
     "To finish enabling two factor authentication, scan the following QR code using your phone's authenticator application or enter the setup key and provide the generated OTP code.": "Pour terminer l’activation de l’authentification à deux facteurs, scannez le code QR suivant à l’aide de l’application d’authentification de votre téléphone ou entrez la clé de configuration et fournissez le code OTP généré.",
-    "To finish enabling two factor authentication, scan the following QR code using your phone’s authenticator application or enter the setup key and provide the generated OTP code.": "Pour terminer l’activation de l’authentification à deux facteurs, scannez le code QR suivant à l’aide de l’application d’authentification de votre téléphone ou entrez la clé de configuration et fournissez le code OTP généré.",
     "Toggle navigation": "Afficher / masquer le menu de navigation",
     "To hear their story": "Pour entendre leur histoire",
     "Token Name": "Nom du jeton",
@@ -1144,7 +1142,6 @@
     "updated the religion": "a mis à jour la religion",
     "Update Password": "Mettre à jour le mot de passe",
     "Update your account's profile information and email address.": "Modifier le profil associé à votre compte ainsi que votre adresse e-mail.",
-    "Update your account’s profile information and email address.": "Mettez à jour les informations de profil et l’adresse e-mail de votre compte.",
     "Upload photo as avatar": "Télécharger une photo en tant qu’avatar",
     "Use": "Utiliser",
     "Use an authentication code": "Utiliser un code d’authentification",
@@ -1269,8 +1266,8 @@
     "You WILL still have to delete your account on Monica or OfficeLife.": "Vous devrez toujours supprimer votre compte sur Monica ou OfficeLife.",
     "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "Vous avez été invité à utiliser cette adresse e-mail dans Monica, un CRM personnel open source, afin que nous puissions l’utiliser pour vous envoyer des notifications.",
     "ze/hir": "ze/hir",
-    "⚠️ Danger zone": "⚠️Zone dangereuse",
-    "🌳 Chalet": "🌳Chalet",
+    "⚠️ Danger zone": "⚠️ Zone dangereuse",
+    "🌳 Chalet": "🌳 Chalet",
     "🏠 Secondary residence": "🏠 Résidence secondaire",
     "🏡 Home": "🏡 Accueil",
     "🏢 Work": "🏢 Travail",
