--- a/lang/hi.json
+++ b/lang/hi.json
@@ -125,7 +125,7 @@
     "All contacts in the vault": "तिजोरी में सभी संपर्क",
     "All files": "सभी फाइलें",
     "All groups in the vault": "तिजोरी में सभी समूह",
-    "All journal metrics in :name": ":name में सभी जर्नल मेट्रिक्स",
+    "All journal metrics in :name": ":Name में सभी जर्नल मेट्रिक्स",
     "All of the people that are part of this team.": "सभी लोग जो इस टीम का हिस्सा हैं ।",
     "All rights reserved.": "सभी अधिकार सुरक्षित.",
     "All tags": "सभी टैग",
@@ -154,7 +154,7 @@
     "All the relationship types": "सभी संबंध प्रकार",
     "All the religions": "सभी धर्म",
     "All the reports": "सारी रिपोर्ट",
-    "All the slices of life in :name": ":name में जीवन के सभी टुकड़े",
+    "All the slices of life in :name": ":Name में जीवन के सभी टुकड़े",
     "All the tags used in the vault": "तिजोरी में उपयोग किए गए सभी टैग",
     "All the templates": "सभी टेम्पलेट्स",
     "All the vaults": "सभी तिजोरियाँ",
@@ -439,7 +439,6 @@
     "For:": "के लिए:",
     "For advice": "सलाह के लिए",
     "Forbidden": "मना किया",
-    "Forgot password?": "पासवर्ड भूल गए?",
     "Forgot your password?": "अपना पासवर्ड भूल गए?",
     "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "अपना पासवर्ड भूल गए? कोई बात नहीं ।  बस हमें अपना ईमेल पता बताएं और हम आपको एक पासवर्ड रीसेट लिंक ईमेल करेंगे जो आपको एक नया चुनने की अनुमति देगा ।",
     "For your security, please confirm your password to continue.": "अपनी सुरक्षा के लिए, कृपया जारी रखने के लिए अपने पासवर्ड की पुष्टि करें ।",
@@ -699,7 +698,7 @@
     "per/per": "प्रति/प्रति",
     "Permanently delete this team.": "इस टीम को स्थायी रूप से हटा दें ।",
     "Permanently delete your account.": "अपने खाते को स्थायी रूप से हटा दें ।",
-    "Permission for :name": ":name के लिए अनुमति",
+    "Permission for :name": ":Name के लिए अनुमति",
     "Permissions": "अनुमतियां",
     "Personal": "निजी",
     "Personalize your account": "अपने खाते को निजीकृत करें",
@@ -747,8 +746,8 @@
     "Profile": "प्रोफ़ाइल",
     "Profile and security": "प्रोफ़ाइल और सुरक्षा",
     "Profile Information": "प्रोफ़ाइल जानकारी",
-    "Profile of :name": ":name की प्रोफ़ाइल",
-    "Profile page of :name": ":name का प्रोफ़ाइल पृष्ठ",
+    "Profile of :name": ":Name की प्रोफ़ाइल",
+    "Profile page of :name": ":Name का प्रोफ़ाइल पृष्ठ",
     "Pronoun": "सर्वनाम",
     "Pronouns": "सर्वनाम",
     "Pronouns are basically how we identify ourselves apart from our name. It’s how someone refers to you in conversation.": "सर्वनाम मूल रूप से हम अपने नाम से अलग अपनी पहचान कैसे बनाते हैं। यह इस प्रकार है कि बातचीत में कोई आपका उल्लेख कैसे करता है।",
@@ -782,7 +781,7 @@
     "Religions": "धर्मों",
     "Religions is all about faith.": "धर्म पूरी तरह आस्था पर आधारित है।",
     "Remember me": "मुझे याद करो",
-    "Reminder for :name": ":name के लिए अनुस्मारक",
+    "Reminder for :name": ":Name के लिए अनुस्मारक",
     "Reminders": "अनुस्मारक",
     "Reminders for the next 30 days": "अगले 30 दिनों के लिए अनुस्मारक",
     "Remind me about this date every year": "हर साल मुझे इस तारीख की याद दिलाएं",
@@ -1095,7 +1094,6 @@
     "Title": "शीर्षक",
     "to": "को",
     "To finish enabling two factor authentication, scan the following QR code using your phone's authenticator application or enter the setup key and provide the generated OTP code.": "टू फैक्टर ऑथेंटिकेशन को सक्षम करने के लिए, अपने फोन के ऑथेंटिकेटर एप्लिकेशन का उपयोग करके निम्नलिखित क्यूआर कोड को स्कैन करें या सेटअप कुंजी दर्ज करें और उत्पन्न ओटीपी कोड प्रदान करें।",
-    "To finish enabling two factor authentication, scan the following QR code using your phone’s authenticator application or enter the setup key and provide the generated OTP code.": "दो कारक प्रमाणीकरण को सक्षम करने के लिए, अपने फोन के प्रमाणक एप्लिकेशन का उपयोग करके निम्नलिखित क्यूआर कोड को स्कैन करें या सेटअप कुंजी दर्ज करें और जेनरेट किया गया ओटीपी कोड प्रदान करें।",
     "Toggle navigation": "टॉगल नेविगेशन",
     "To hear their story": "उनकी कहानी सुनने के लिए",
     "Token Name": "टोकन नाम",
@@ -1144,7 +1142,6 @@
     "updated the religion": "धर्म को अद्यतन किया",
     "Update Password": "पासवर्ड अपडेट करें",
     "Update your account's profile information and email address.": "अपने खाते की प्रोफ़ाइल जानकारी और ईमेल पता अपडेट करें ।",
-    "Update your account’s profile information and email address.": "अपने खाते की प्रोफ़ाइल जानकारी और ईमेल पता अपडेट करें।",
     "Upload photo as avatar": "अवतार के रूप में फोटो अपलोड करें",
     "Use": "उपयोग",
     "Use an authentication code": "प्रमाणीकरण कोड का उपयोग करें",
@@ -1198,7 +1195,7 @@
     "We’ll send an email to this email address that you will need to confirm before we can send notifications to this address.": "हम इस ईमेल पते पर एक ईमेल भेजेंगे जिसकी हमें इस पते पर सूचनाएं भेजने से पहले पुष्टि करनी होगी।",
     "What happens now?": "अब क्या होता है?",
     "What is the loan?": "ऋण क्या है?",
-    "What permission should :name have?": ":name के पास क्या अनुमति होनी चाहिए?",
+    "What permission should :name have?": ":Name के पास क्या अनुमति होनी चाहिए?",
     "What permission should the user have?": "उपयोगकर्ता के पास क्या अनुमति होनी चाहिए?",
     "Whatsapp": "Whatsapp",
     "What should we use to display maps?": "मानचित्र प्रदर्शित करने के लिए हमें किसका उपयोग करना चाहिए?",
