--- a/lang/ja.json
+++ b/lang/ja.json
@@ -125,7 +125,7 @@
     "All contacts in the vault": "ボールト内のすべての連絡先",
     "All files": "すべてのファイル",
     "All groups in the vault": "ボールト内のすべてのグループ",
-    "All journal metrics in :name": ":name のすべてのジャーナル指標",
+    "All journal metrics in :name": ":Name のすべてのジャーナル指標",
     "All of the people that are part of this team.": "全チームメンバー",
     "All rights reserved.": "All rights reserved.",
     "All tags": "すべてのタグ",
@@ -154,7 +154,7 @@
     "All the relationship types": "すべての関係タイプ",
     "All the religions": "すべての宗教",
     "All the reports": "すべてのレポート",
-    "All the slices of life in :name": ":nameの人生のすべての断片",
+    "All the slices of life in :name": ":Nameの人生のすべての断片",
     "All the tags used in the vault": "Vault で使用されるすべてのタグ",
     "All the templates": "すべてのテンプレート",
     "All the vaults": "すべての保管庫",
@@ -439,7 +439,6 @@
     "For:": "のために：",
     "For advice": "アドバイスのため",
     "Forbidden": "禁止されています",
-    "Forgot password?": "パスワードをお忘れですか？",
     "Forgot your password?": "パスワードを忘れた方はこちら",
     "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "ご登録いただいたメールアドレスを入力してください。パスワード再設定用のURLをメールにてお送りします。",
     "For your security, please confirm your password to continue.": "安全のため、パスワードを入力して続行してください。",
@@ -699,7 +698,7 @@
     "per/per": "あたり/あたり",
     "Permanently delete this team.": "永久にチームを削除する。",
     "Permanently delete your account.": "永久にアカウントを削除する。",
-    "Permission for :name": ":nameの許可",
+    "Permission for :name": ":Nameの許可",
     "Permissions": "認可",
     "Personal": "個人的",
     "Personalize your account": "アカウントをパーソナライズする",
@@ -747,8 +746,8 @@
     "Profile": "プロフィール",
     "Profile and security": "プロフィールとセキュリティ",
     "Profile Information": "プロフィール情報",
-    "Profile of :name": ":nameのプロフィール",
-    "Profile page of :name": ":name のプロフィール ページ",
+    "Profile of :name": ":Nameのプロフィール",
+    "Profile page of :name": ":Name のプロフィール ページ",
     "Pronoun": "代名詞",
     "Pronouns": "代名詞",
     "Pronouns are basically how we identify ourselves apart from our name. It’s how someone refers to you in conversation.": "代名詞は基本的に、名前とは別に自分自身を識別する方法です。これは、誰かが会話の中であなたを指す方法です。",
@@ -782,7 +781,7 @@
     "Religions": "宗教",
     "Religions is all about faith.": "宗教はすべて信仰です。",
     "Remember me": "ログイン状態を保持する",
-    "Reminder for :name": ":name へのリマインダー",
+    "Reminder for :name": ":Name へのリマインダー",
     "Reminders": "リマインダー",
     "Reminders for the next 30 days": "今後 30 日間のリマインダー",
     "Remind me about this date every year": "毎年この日付について思い出させてくれる",
@@ -1095,7 +1094,6 @@
     "Title": "タイトル",
     "to": "に",
     "To finish enabling two factor authentication, scan the following QR code using your phone's authenticator application or enter the setup key and provide the generated OTP code.": "二要素認証を有効にするには、お使いの携帯電話の認証アプリを使用してQRコードをスキャンするか、セットアップキーを入力した後に生成されたワンタイムパスワードを入力してください。",
-    "To finish enabling two factor authentication, scan the following QR code using your phone’s authenticator application or enter the setup key and provide the generated OTP code.": "2 要素認証の有効化を完了するには、携帯電話の認証アプリケーションを使用して次の QR コードをスキャンするか、セットアップ キーを入力して生成された OTP コードを提供します。",
     "Toggle navigation": "ナビゲーション切替",
     "To hear their story": "彼らの話を聞くために",
     "Token Name": "トークン名",
@@ -1144,7 +1142,6 @@
     "updated the religion": "宗教を更新しました",
     "Update Password": "パスワード更新",
     "Update your account's profile information and email address.": "プロフィール情報とメールアドレスを更新する。",
-    "Update your account’s profile information and email address.": "アカウントのプロフィール情報とメールアドレスを更新します。",
     "Upload photo as avatar": "写真をアバターとしてアップロード",
     "Use": "使用",
     "Use an authentication code": "認証コードを使用する",
@@ -1198,7 +1195,7 @@
     "We’ll send an email to this email address that you will need to confirm before we can send notifications to this address.": "このメール アドレスにメールを送信します。このアドレスに通知を送信する前に確認する必要があります。",
     "What happens now?": "今、何が起きた？",
     "What is the loan?": "ローンとは何ですか?",
-    "What permission should :name have?": ":nameにはどのような権限が必要ですか?",
+    "What permission should :name have?": ":Nameにはどのような権限が必要ですか?",
     "What permission should the user have?": "ユーザーにはどのような権限が必要ですか?",
     "Whatsapp": "ワッツアップ",
     "What should we use to display maps?": "地図を表示するには何を使用すればよいでしょうか?",
