--- a/lang/ml.json
+++ b/lang/ml.json
@@ -125,7 +125,7 @@
     "All contacts in the vault": "നിലവറയിലെ എല്ലാ കോൺടാക്റ്റുകളും",
     "All files": "എല്ലാ ഫയലുകളും",
     "All groups in the vault": "നിലവറയിലെ എല്ലാ ഗ്രൂപ്പുകളും",
-    "All journal metrics in :name": ":name എന്നതിലെ എല്ലാ ജേണൽ മെട്രിക്കുകളും",
+    "All journal metrics in :name": ":Name എന്നതിലെ എല്ലാ ജേണൽ മെട്രിക്കുകളും",
     "All of the people that are part of this team.": "ഈ ടീമിന്റെ ഭാഗമായ എല്ലാ ആളുകളും.",
     "All rights reserved.": "എല്ലാ അവകാശങ്ങളും നിക്ഷിപ്തം.",
     "All tags": "എല്ലാ ടാഗുകളും",
@@ -154,7 +154,7 @@
     "All the relationship types": "എല്ലാ തരത്തിലുള്ള ബന്ധങ്ങളും",
     "All the religions": "എല്ലാ മതങ്ങളും",
     "All the reports": "എല്ലാ റിപ്പോർട്ടുകളും",
-    "All the slices of life in :name": ":name-ലെ ജീവിതത്തിന്റെ എല്ലാ ഭാഗങ്ങളും",
+    "All the slices of life in :name": ":Name-ലെ ജീവിതത്തിന്റെ എല്ലാ ഭാഗങ്ങളും",
     "All the tags used in the vault": "നിലവറയിൽ ഉപയോഗിക്കുന്ന എല്ലാ ടാഗുകളും",
     "All the templates": "എല്ലാ ടെംപ്ലേറ്റുകളും",
     "All the vaults": "എല്ലാ നിലവറകളും",
@@ -439,7 +439,6 @@
     "For:": "വേണ്ടി:",
     "For advice": "ഉപദേശത്തിന് വേണ്ടി",
     "Forbidden": "വിലക്കപ്പെട്ട",
-    "Forgot password?": "പാസ്വേഡ് മറന്നോ?",
     "Forgot your password?": "നിങ്ങളുടെ പാസ്വേഡ് മറന്നോ?",
     "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "നിങ്ങളുടെ പാസ്വേഡ് മറന്നോ? ഒരു പ്രശ്നവുമില്ല. നിങ്ങളുടെ ഇമെയിൽ വിലാസം ഞങ്ങളെ അറിയിക്കുക, പുതിയൊരെണ്ണം തിരഞ്ഞെടുക്കാൻ നിങ്ങളെ അനുവദിക്കുന്ന ഒരു പാസ്‌വേഡ് പുനഃസജ്ജീകരണ ലിങ്ക് ഞങ്ങൾ ഇമെയിൽ ചെയ്യും.",
     "For your security, please confirm your password to continue.": "നിങ്ങളുടെ സുരക്ഷയ്ക്കായി, തുടരാൻ നിങ്ങളുടെ പാസ്‌വേഡ് സ്ഥിരീകരിക്കുക.",
@@ -700,7 +699,7 @@
     "per/per": "ഓരോ / ഓരോ",
     "Permanently delete this team.": "ഈ ടീമിനെ ശാശ്വതമായി ഇല്ലാതാക്കുക.",
     "Permanently delete your account.": "നിങ്ങളുടെ അക്കൗണ്ട് ശാശ്വതമായി ഇല്ലാതാക്കുക.",
-    "Permission for :name": ":name എന്നതിനുള്ള അനുമതി",
+    "Permission for :name": ":Name എന്നതിനുള്ള അനുമതി",
     "Permissions": "അനുമതികൾ",
     "Personal": "വ്യക്തിപരം",
     "Personalize your account": "നിങ്ങളുടെ അക്കൗണ്ട് വ്യക്തിഗതമാക്കുക",
@@ -748,8 +747,8 @@
     "Profile": "പ്രൊഫൈൽ",
     "Profile and security": "പ്രൊഫൈലും സുരക്ഷയും",
     "Profile Information": "വ്യക്തിഗത വിവരങ്ങൾ",
-    "Profile of :name": ":name എന്നതിന്റെ പ്രൊഫൈൽ",
-    "Profile page of :name": ":name എന്നതിന്റെ പ്രൊഫൈൽ പേജ്",
+    "Profile of :name": ":Name എന്നതിന്റെ പ്രൊഫൈൽ",
+    "Profile page of :name": ":Name എന്നതിന്റെ പ്രൊഫൈൽ പേജ്",
     "Pronoun": "സർവ്വനാമം",
     "Pronouns": "സർവ്വനാമം",
     "Pronouns are basically how we identify ourselves apart from our name. It’s how someone refers to you in conversation.": "സർവ്വനാമങ്ങൾ അടിസ്ഥാനപരമായി നമ്മുടെ പേരിൽ നിന്ന് വേറിട്ട് നമ്മളെ എങ്ങനെ തിരിച്ചറിയുന്നു എന്നതാണ്. സംഭാഷണത്തിൽ ആരെങ്കിലും നിങ്ങളെ പരാമർശിക്കുന്നത് ഇങ്ങനെയാണ്.",
@@ -783,7 +782,7 @@
     "Religions": "മതങ്ങൾ",
     "Religions is all about faith.": "മതങ്ങൾ എല്ലാം വിശ്വാസമാണ്.",
     "Remember me": "എന്നെ ഓർമ്മിക്കുക",
-    "Reminder for :name": ":name എന്നതിനായുള്ള ഓർമ്മപ്പെടുത്തൽ",
+    "Reminder for :name": ":Name എന്നതിനായുള്ള ഓർമ്മപ്പെടുത്തൽ",
     "Reminders": "ഓർമ്മപ്പെടുത്തലുകൾ",
     "Reminders for the next 30 days": "അടുത്ത 30 ദിവസത്തേക്കുള്ള ഓർമ്മപ്പെടുത്തലുകൾ",
     "Remind me about this date every year": "എല്ലാ വർഷവും ഈ തീയതിയെക്കുറിച്ച് എന്നെ ഓർമ്മിപ്പിക്കുക",
@@ -894,15 +893,15 @@
     "Thanks,": "നന്ദി,",
     "Thanks for giving Monica a try.": "Monica ശ്രമിച്ചതിന് നന്ദി.",
     "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "സൈൻ അപ്പ് ചെയ്തതിന് നന്ദി! ആരംഭിക്കുന്നതിന് മുമ്പ്, ഞങ്ങൾ നിങ്ങൾക്ക് ഇമെയിൽ അയച്ച ലിങ്കിൽ ക്ലിക്കുചെയ്ത് നിങ്ങളുടെ ഇമെയിൽ വിലാസം പരിശോധിക്കാമോ? നിങ്ങൾക്ക് ഇമെയിൽ ലഭിച്ചില്ലെങ്കിൽ, ഞങ്ങൾ നിങ്ങൾക്ക് സന്തോഷത്തോടെ മറ്റൊന്ന് അയയ്ക്കും.",
-    "The :attribute must be at least :length characters.": ":attribute കുറഞ്ഞത് :length പ്രതീകങ്ങളെങ്കിലും ഉണ്ടായിരിക്കണം.",
-    "The :attribute must be at least :length characters and contain at least one number.": ":attribute എന്നതിൽ കുറഞ്ഞത് :length പ്രതീകങ്ങളെങ്കിലും ഉണ്ടായിരിക്കണം കൂടാതെ ഒരു അക്കമെങ്കിലും അടങ്ങിയിരിക്കണം.",
-    "The :attribute must be at least :length characters and contain at least one special character.": ":attribute എന്നതിൽ കുറഞ്ഞത് :length പ്രതീകങ്ങളെങ്കിലും ഉണ്ടായിരിക്കണം കൂടാതെ ഒരു പ്രത്യേക പ്രതീകമെങ്കിലും അടങ്ങിയിരിക്കണം.",
-    "The :attribute must be at least :length characters and contain at least one special character and one number.": ":attribute എന്നതിൽ കുറഞ്ഞത് :length പ്രതീകങ്ങളെങ്കിലും ഉണ്ടായിരിക്കണം കൂടാതെ കുറഞ്ഞത് ഒരു പ്രത്യേക പ്രതീകവും ഒരു സംഖ്യയും ഉണ്ടായിരിക്കണം.",
-    "The :attribute must be at least :length characters and contain at least one uppercase character, one number, and one special character.": ":attribute എന്നതിൽ കുറഞ്ഞത് :length പ്രതീകങ്ങളെങ്കിലും ഉണ്ടായിരിക്കണം കൂടാതെ ഒരു വലിയക്ഷരം, ഒരു സംഖ്യ, ഒരു പ്രത്യേക പ്രതീകം എന്നിവയെങ്കിലും അടങ്ങിയിരിക്കണം.",
-    "The :attribute must be at least :length characters and contain at least one uppercase character.": ":attribute എന്നതിൽ കുറഞ്ഞത് :length പ്രതീകങ്ങളെങ്കിലും ഉണ്ടായിരിക്കണം കൂടാതെ ഒരു വലിയക്ഷരം എങ്കിലും അടങ്ങിയിരിക്കണം.",
-    "The :attribute must be at least :length characters and contain at least one uppercase character and one number.": ":attribute എന്നതിൽ കുറഞ്ഞത് :length പ്രതീകങ്ങളെങ്കിലും ഉണ്ടായിരിക്കണം, കൂടാതെ കുറഞ്ഞത് ഒരു വലിയക്ഷരവും ഒരു അക്കവും ഉണ്ടായിരിക്കണം.",
-    "The :attribute must be at least :length characters and contain at least one uppercase character and one special character.": ":attribute എന്നതിൽ കുറഞ്ഞത് :length പ്രതീകങ്ങളെങ്കിലും ഉണ്ടായിരിക്കണം, കൂടാതെ കുറഞ്ഞത് ഒരു വലിയക്ഷരവും ഒരു പ്രത്യേക പ്രതീകവും ഉണ്ടായിരിക്കണം.",
-    "The :attribute must be a valid role.": ":attribute ഒരു സാധുവായ റോൾ ആയിരിക്കണം.",
+    "The :attribute must be at least :length characters.": ":Attribute കുറഞ്ഞത് :length പ്രതീകങ്ങളെങ്കിലും ഉണ്ടായിരിക്കണം.",
+    "The :attribute must be at least :length characters and contain at least one number.": ":Attribute എന്നതിൽ കുറഞ്ഞത് :length പ്രതീകങ്ങളെങ്കിലും ഉണ്ടായിരിക്കണം കൂടാതെ ഒരു അക്കമെങ്കിലും അടങ്ങിയിരിക്കണം.",
+    "The :attribute must be at least :length characters and contain at least one special character.": ":Attribute എന്നതിൽ കുറഞ്ഞത് :length പ്രതീകങ്ങളെങ്കിലും ഉണ്ടായിരിക്കണം കൂടാതെ ഒരു പ്രത്യേക പ്രതീകമെങ്കിലും അടങ്ങിയിരിക്കണം.",
+    "The :attribute must be at least :length characters and contain at least one special character and one number.": ":Attribute എന്നതിൽ കുറഞ്ഞത് :length പ്രതീകങ്ങളെങ്കിലും ഉണ്ടായിരിക്കണം കൂടാതെ കുറഞ്ഞത് ഒരു പ്രത്യേക പ്രതീകവും ഒരു സംഖ്യയും ഉണ്ടായിരിക്കണം.",
+    "The :attribute must be at least :length characters and contain at least one uppercase character, one number, and one special character.": ":Attribute എന്നതിൽ കുറഞ്ഞത് :length പ്രതീകങ്ങളെങ്കിലും ഉണ്ടായിരിക്കണം കൂടാതെ ഒരു വലിയക്ഷരം, ഒരു സംഖ്യ, ഒരു പ്രത്യേക പ്രതീകം എന്നിവയെങ്കിലും അടങ്ങിയിരിക്കണം.",
+    "The :attribute must be at least :length characters and contain at least one uppercase character.": ":Attribute എന്നതിൽ കുറഞ്ഞത് :length പ്രതീകങ്ങളെങ്കിലും ഉണ്ടായിരിക്കണം കൂടാതെ ഒരു വലിയക്ഷരം എങ്കിലും അടങ്ങിയിരിക്കണം.",
+    "The :attribute must be at least :length characters and contain at least one uppercase character and one number.": ":Attribute എന്നതിൽ കുറഞ്ഞത് :length പ്രതീകങ്ങളെങ്കിലും ഉണ്ടായിരിക്കണം, കൂടാതെ കുറഞ്ഞത് ഒരു വലിയക്ഷരവും ഒരു അക്കവും ഉണ്ടായിരിക്കണം.",
+    "The :attribute must be at least :length characters and contain at least one uppercase character and one special character.": ":Attribute എന്നതിൽ കുറഞ്ഞത് :length പ്രതീകങ്ങളെങ്കിലും ഉണ്ടായിരിക്കണം, കൂടാതെ കുറഞ്ഞത് ഒരു വലിയക്ഷരവും ഒരു പ്രത്യേക പ്രതീകവും ഉണ്ടായിരിക്കണം.",
+    "The :attribute must be a valid role.": ":Attribute ഒരു സാധുവായ റോൾ ആയിരിക്കണം.",
     "The account’s data will be permanently deleted from our servers within 30 days and from all backups within 60 days.": "അക്കൗണ്ടിന്റെ ഡാറ്റ 30 ദിവസത്തിനുള്ളിൽ ഞങ്ങളുടെ സെർവറുകളിൽ നിന്നും 60 ദിവസത്തിനുള്ളിൽ എല്ലാ ബാക്കപ്പുകളിൽ നിന്നും ശാശ്വതമായി ഇല്ലാതാക്കപ്പെടും.",
     "The address type has been created": "വിലാസ തരം സൃഷ്ടിച്ചു",
     "The address type has been deleted": "വിലാസ തരം ഇല്ലാതാക്കി",
@@ -1095,7 +1094,6 @@
     "Title": "തലക്കെട്ട്",
     "to": "വരെ",
     "To finish enabling two factor authentication, scan the following QR code using your phone's authenticator application or enter the setup key and provide the generated OTP code.": "രണ്ട് ഘടകങ്ങളുടെ പ്രാമാണീകരണം പ്രവർത്തനക്ഷമമാക്കുന്നത് പൂർത്തിയാക്കാൻ, നിങ്ങളുടെ ഫോണിന്റെ ഓതന്റിക്കേറ്റർ ആപ്ലിക്കേഷൻ ഉപയോഗിച്ച് ഇനിപ്പറയുന്ന QR കോഡ് സ്കാൻ ചെയ്യുക അല്ലെങ്കിൽ സജ്ജീകരണ കീ നൽകി ജനറേറ്റ് ചെയ്ത OTP കോഡ് നൽകുക.",
-    "To finish enabling two factor authentication, scan the following QR code using your phone’s authenticator application or enter the setup key and provide the generated OTP code.": "രണ്ട് ഘടകങ്ങളുടെ പ്രാമാണീകരണം പ്രവർത്തനക്ഷമമാക്കുന്നത് പൂർത്തിയാക്കാൻ, നിങ്ങളുടെ ഫോണിന്റെ ഓതന്റിക്കേറ്റർ ആപ്ലിക്കേഷൻ ഉപയോഗിച്ച് ഇനിപ്പറയുന്ന QR കോഡ് സ്കാൻ ചെയ്യുക അല്ലെങ്കിൽ സജ്ജീകരണ കീ നൽകി ജനറേറ്റ് ചെയ്ത OTP കോഡ് നൽകുക.",
     "Toggle navigation": "നാവിഗേഷൻ ടോഗിൾ ചെയ്യുക",
     "To hear their story": "അവരുടെ കഥ കേൾക്കാൻ",
     "Token Name": "ടോക്കൺ പേര്",
@@ -1145,7 +1143,6 @@
     "updated the religion": "മതം പുതുക്കി",
     "Update Password": "പാസ്‌വേഡ് അപ്‌ഡേറ്റ് ചെയ്യുക",
     "Update your account's profile information and email address.": "നിങ്ങളുടെ അക്കൗണ്ടിന്റെ പ്രൊഫൈൽ വിവരങ്ങളും ഇമെയിൽ വിലാസവും അപ്ഡേറ്റ് ചെയ്യുക.",
-    "Update your account’s profile information and email address.": "നിങ്ങളുടെ അക്കൗണ്ടിന്റെ പ്രൊഫൈൽ വിവരങ്ങളും ഇമെയിൽ വിലാസവും അപ്ഡേറ്റ് ചെയ്യുക.",
     "Upload photo as avatar": "അവതാർ ആയി ഫോട്ടോ അപ്‌ലോഡ് ചെയ്യുക",
     "Use": "ഉപയോഗിക്കുക",
     "Use an authentication code": "ഒരു പ്രാമാണീകരണ കോഡ് ഉപയോഗിക്കുക",
@@ -1199,7 +1196,7 @@
     "We’ll send an email to this email address that you will need to confirm before we can send notifications to this address.": "ഈ വിലാസത്തിലേക്ക് ഞങ്ങൾ അറിയിപ്പുകൾ അയയ്‌ക്കുന്നതിന് മുമ്പ് നിങ്ങൾ സ്ഥിരീകരിക്കേണ്ട ഒരു ഇമെയിൽ ഈ ഇമെയിൽ വിലാസത്തിലേക്ക് അയയ്‌ക്കും.",
     "What happens now?": "ഇപ്പോൾ എന്താണ് സംഭവിക്കുന്നത്?",
     "What is the loan?": "എന്താണ് വായ്പ?",
-    "What permission should :name have?": ":name എന്നയാൾക്ക് എന്ത് അനുമതി വേണം?",
+    "What permission should :name have?": ":Name എന്നയാൾക്ക് എന്ത് അനുമതി വേണം?",
     "What permission should the user have?": "ഉപയോക്താവിന് എന്ത് അനുമതി ഉണ്ടായിരിക്കണം?",
     "Whatsapp": "Whatsapp",
     "What should we use to display maps?": "മാപ്പുകൾ പ്രദർശിപ്പിക്കാൻ നമ്മൾ എന്താണ് ഉപയോഗിക്കേണ്ടത്?",
