--- a/lang/pa.json
+++ b/lang/pa.json
@@ -125,7 +125,7 @@
     "All contacts in the vault": "ਵਾਲਟ ਵਿੱਚ ਸਾਰੇ ਸੰਪਰਕ",
     "All files": "ਸਾਰੀਆਂ ਫਾਈਲਾਂ",
     "All groups in the vault": "ਵਾਲਟ ਵਿੱਚ ਸਾਰੇ ਸਮੂਹ",
-    "All journal metrics in :name": ":name ਵਿੱਚ ਸਾਰੇ ਜਰਨਲ ਮੈਟ੍ਰਿਕਸ",
+    "All journal metrics in :name": ":Name ਵਿੱਚ ਸਾਰੇ ਜਰਨਲ ਮੈਟ੍ਰਿਕਸ",
     "All of the people that are part of this team.": "ਉਹ ਸਾਰੇ ਲੋਕ ਜੋ ਇਸ ਟੀਮ ਦਾ ਹਿੱਸਾ ਹਨ।",
     "All rights reserved.": "ਸਾਰੇ ਹੱਕ ਰਾਖਵੇਂ ਹਨ.",
     "All tags": "ਸਾਰੇ ਟੈਗ",
@@ -154,7 +154,7 @@
     "All the relationship types": "ਰਿਸ਼ਤੇ ਦੀਆਂ ਸਾਰੀਆਂ ਕਿਸਮਾਂ",
     "All the religions": "ਸਾਰੇ ਧਰਮ",
     "All the reports": "ਸਾਰੀਆਂ ਰਿਪੋਰਟਾਂ",
-    "All the slices of life in :name": ":name ਵਿੱਚ ਜ਼ਿੰਦਗੀ ਦੇ ਸਾਰੇ ਟੁਕੜੇ",
+    "All the slices of life in :name": ":Name ਵਿੱਚ ਜ਼ਿੰਦਗੀ ਦੇ ਸਾਰੇ ਟੁਕੜੇ",
     "All the tags used in the vault": "ਵਾਲਟ ਵਿੱਚ ਵਰਤੇ ਗਏ ਸਾਰੇ ਟੈਗ",
     "All the templates": "ਸਾਰੇ ਖਾਕੇ",
     "All the vaults": "ਸਾਰੇ ਵਾਲਟ",
@@ -439,7 +439,6 @@
     "For:": "ਲਈ:",
     "For advice": "ਸਲਾਹ ਲਈ",
     "Forbidden": "ਵਰਜਿਤ",
-    "Forgot password?": "ਪਾਸਵਰਡ ਭੁੱਲ ਗਏ?",
     "Forgot your password?": "ਆਪਣਾ ਪਾਸਵਰਡ ਭੁੱਲ ਗਏ?",
     "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "ਆਪਣਾ ਪਾਸਵਰਡ ਭੁੱਲ ਗਏ? ਕੋਈ ਸਮੱਸਿਆ ਨਹੀ. ਬੱਸ ਸਾਨੂੰ ਆਪਣਾ ਈਮੇਲ ਪਤਾ ਦੱਸੋ ਅਤੇ ਅਸੀਂ ਤੁਹਾਨੂੰ ਇੱਕ ਪਾਸਵਰਡ ਰੀਸੈਟ ਲਿੰਕ ਈਮੇਲ ਕਰਾਂਗੇ ਜੋ ਤੁਹਾਨੂੰ ਇੱਕ ਨਵਾਂ ਚੁਣਨ ਦੀ ਇਜਾਜ਼ਤ ਦੇਵੇਗਾ।",
     "For your security, please confirm your password to continue.": "ਤੁਹਾਡੀ ਸੁਰੱਖਿਆ ਲਈ, ਕਿਰਪਾ ਕਰਕੇ ਜਾਰੀ ਰੱਖਣ ਲਈ ਆਪਣੇ ਪਾਸਵਰਡ ਦੀ ਪੁਸ਼ਟੀ ਕਰੋ।",
@@ -700,7 +699,7 @@
     "per/per": "ਪ੍ਰਤੀ/ਪ੍ਰਤੀ",
     "Permanently delete this team.": "ਇਸ ਟੀਮ ਨੂੰ ਪੱਕੇ ਤੌਰ ’ਤੇ ਮਿਟਾਓ।",
     "Permanently delete your account.": "ਆਪਣੇ ਖਾਤੇ ਨੂੰ ਪੱਕੇ ਤੌਰ ’ਤੇ ਮਿਟਾਓ।",
-    "Permission for :name": ":name ਲਈ ਇਜਾਜ਼ਤ",
+    "Permission for :name": ":Name ਲਈ ਇਜਾਜ਼ਤ",
     "Permissions": "ਇਜਾਜ਼ਤਾਂ",
     "Personal": "ਨਿੱਜੀ",
     "Personalize your account": "ਆਪਣੇ ਖਾਤੇ ਨੂੰ ਨਿੱਜੀ ਬਣਾਓ",
@@ -748,8 +747,8 @@
     "Profile": "ਪ੍ਰੋਫਾਈਲ",
     "Profile and security": "ਪ੍ਰੋਫਾਈਲ ਅਤੇ ਸੁਰੱਖਿਆ",
     "Profile Information": "ਪ੍ਰੋਫਾਈਲ ਜਾਣਕਾਰੀ",
-    "Profile of :name": ":name ਦਾ ਪ੍ਰੋਫਾਈਲ",
-    "Profile page of :name": ":name ਦਾ ਪ੍ਰੋਫਾਈਲ ਪੰਨਾ",
+    "Profile of :name": ":Name ਦਾ ਪ੍ਰੋਫਾਈਲ",
+    "Profile page of :name": ":Name ਦਾ ਪ੍ਰੋਫਾਈਲ ਪੰਨਾ",
     "Pronoun": "ਪੜਨਾਂਵ",
     "Pronouns": "ਪੜਨਾਂਵ",
     "Pronouns are basically how we identify ourselves apart from our name. It’s how someone refers to you in conversation.": "ਪੜਨਾਂਵ ਮੂਲ ਰੂਪ ਵਿੱਚ ਇਹ ਹੁੰਦੇ ਹਨ ਕਿ ਅਸੀਂ ਆਪਣੇ ਨਾਮ ਤੋਂ ਇਲਾਵਾ ਆਪਣੇ ਆਪ ਨੂੰ ਕਿਵੇਂ ਪਛਾਣਦੇ ਹਾਂ। ਇਸ ਤਰ੍ਹਾਂ ਕੋਈ ਵਿਅਕਤੀ ਗੱਲਬਾਤ ਵਿੱਚ ਤੁਹਾਡਾ ਹਵਾਲਾ ਦਿੰਦਾ ਹੈ।",
@@ -783,7 +782,7 @@
     "Religions": "ਧਰਮ",
     "Religions is all about faith.": "ਧਰਮ ਸਾਰੇ ਵਿਸ਼ਵਾਸ ਬਾਰੇ ਹਨ.",
     "Remember me": "ਮੇਰੀ ਯਾਦ ਹੈ",
-    "Reminder for :name": ":name ਲਈ ਰੀਮਾਈਂਡਰ",
+    "Reminder for :name": ":Name ਲਈ ਰੀਮਾਈਂਡਰ",
     "Reminders": "ਰੀਮਾਈਂਡਰ",
     "Reminders for the next 30 days": "ਅਗਲੇ 30 ਦਿਨਾਂ ਲਈ ਰੀਮਾਈਂਡਰ",
     "Remind me about this date every year": "ਮੈਨੂੰ ਹਰ ਸਾਲ ਇਸ ਤਾਰੀਖ ਬਾਰੇ ਯਾਦ ਕਰਾਓ",
@@ -894,15 +893,15 @@
     "Thanks,": "ਧੰਨਵਾਦ,",
     "Thanks for giving Monica a try.": "Monica ਨੂੰ ਅਜ਼ਮਾਉਣ ਲਈ ਧੰਨਵਾਦ।",
     "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "ਸਾਈਨ ਅੱਪ ਕਰਨ ਲਈ ਧੰਨਵਾਦ! ਸ਼ੁਰੂ ਕਰਨ ਤੋਂ ਪਹਿਲਾਂ, ਕੀ ਤੁਸੀਂ ਉਸ ਲਿੰਕ ’ਤੇ ਕਲਿੱਕ ਕਰਕੇ ਆਪਣੇ ਈਮੇਲ ਪਤੇ ਦੀ ਪੁਸ਼ਟੀ ਕਰ ਸਕਦੇ ਹੋ ਜੋ ਅਸੀਂ ਤੁਹਾਨੂੰ ਈਮੇਲ ਕੀਤਾ ਹੈ? ਜੇਕਰ ਤੁਹਾਨੂੰ ਈਮੇਲ ਪ੍ਰਾਪਤ ਨਹੀਂ ਹੋਈ, ਤਾਂ ਅਸੀਂ ਖੁਸ਼ੀ ਨਾਲ ਤੁਹਾਨੂੰ ਇੱਕ ਹੋਰ ਭੇਜਾਂਗੇ।",
-    "The :attribute must be at least :length characters.": ":attribute ਘੱਟੋ-ਘੱਟ :length ਅੱਖਰਾਂ ਦਾ ਹੋਣਾ ਚਾਹੀਦਾ ਹੈ।",
-    "The :attribute must be at least :length characters and contain at least one number.": ":attribute ਵਿੱਚ ਘੱਟੋ-ਘੱਟ :length ਅੱਖਰ ਹੋਣੇ ਚਾਹੀਦੇ ਹਨ ਅਤੇ ਘੱਟੋ-ਘੱਟ ਇੱਕ ਨੰਬਰ ਹੋਣਾ ਚਾਹੀਦਾ ਹੈ।",
-    "The :attribute must be at least :length characters and contain at least one special character.": ":attribute ਵਿੱਚ ਘੱਟੋ-ਘੱਟ :length ਅੱਖਰ ਹੋਣੇ ਚਾਹੀਦੇ ਹਨ ਅਤੇ ਘੱਟੋ-ਘੱਟ ਇੱਕ ਵਿਸ਼ੇਸ਼ ਅੱਖਰ ਹੋਣਾ ਚਾਹੀਦਾ ਹੈ।",
-    "The :attribute must be at least :length characters and contain at least one special character and one number.": ":attribute ਵਿੱਚ ਘੱਟੋ-ਘੱਟ :length ਅੱਖਰ ਹੋਣੇ ਚਾਹੀਦੇ ਹਨ ਅਤੇ ਘੱਟੋ-ਘੱਟ ਇੱਕ ਵਿਸ਼ੇਸ਼ ਅੱਖਰ ਅਤੇ ਇੱਕ ਨੰਬਰ ਹੋਣਾ ਚਾਹੀਦਾ ਹੈ।",
-    "The :attribute must be at least :length characters and contain at least one uppercase character, one number, and one special character.": ":attribute ਵਿੱਚ ਘੱਟੋ-ਘੱਟ :length ਅੱਖਰ ਹੋਣੇ ਚਾਹੀਦੇ ਹਨ ਅਤੇ ਘੱਟੋ-ਘੱਟ ਇੱਕ ਵੱਡੇ ਅੱਖਰ, ਇੱਕ ਨੰਬਰ, ਅਤੇ ਇੱਕ ਵਿਸ਼ੇਸ਼ ਅੱਖਰ ਹੋਣਾ ਚਾਹੀਦਾ ਹੈ।",
-    "The :attribute must be at least :length characters and contain at least one uppercase character.": ":attribute ਵਿੱਚ ਘੱਟੋ-ਘੱਟ :length ਅੱਖਰ ਹੋਣੇ ਚਾਹੀਦੇ ਹਨ ਅਤੇ ਘੱਟੋ-ਘੱਟ ਇੱਕ ਵੱਡਾ ਅੱਖਰ ਹੋਣਾ ਚਾਹੀਦਾ ਹੈ।",
-    "The :attribute must be at least :length characters and contain at least one uppercase character and one number.": ":attribute ਵਿੱਚ ਘੱਟੋ-ਘੱਟ :length ਅੱਖਰ ਹੋਣੇ ਚਾਹੀਦੇ ਹਨ ਅਤੇ ਘੱਟੋ-ਘੱਟ ਇੱਕ ਵੱਡੇ ਅੱਖਰ ਅਤੇ ਇੱਕ ਨੰਬਰ ਹੋਣਾ ਚਾਹੀਦਾ ਹੈ।",
-    "The :attribute must be at least :length characters and contain at least one uppercase character and one special character.": ":attribute ਵਿੱਚ ਘੱਟੋ-ਘੱਟ :length ਅੱਖਰ ਹੋਣੇ ਚਾਹੀਦੇ ਹਨ ਅਤੇ ਘੱਟੋ-ਘੱਟ ਇੱਕ ਅਪਰਕੇਸ ਅੱਖਰ ਅਤੇ ਇੱਕ ਵਿਸ਼ੇਸ਼ ਅੱਖਰ ਹੋਣਾ ਚਾਹੀਦਾ ਹੈ।",
-    "The :attribute must be a valid role.": ":attribute ਇੱਕ ਵੈਧ ਭੂਮਿਕਾ ਹੋਣੀ ਚਾਹੀਦੀ ਹੈ।",
+    "The :attribute must be at least :length characters.": ":Attribute ਘੱਟੋ-ਘੱਟ :length ਅੱਖਰਾਂ ਦਾ ਹੋਣਾ ਚਾਹੀਦਾ ਹੈ।",
+    "The :attribute must be at least :length characters and contain at least one number.": ":Attribute ਵਿੱਚ ਘੱਟੋ-ਘੱਟ :length ਅੱਖਰ ਹੋਣੇ ਚਾਹੀਦੇ ਹਨ ਅਤੇ ਘੱਟੋ-ਘੱਟ ਇੱਕ ਨੰਬਰ ਹੋਣਾ ਚਾਹੀਦਾ ਹੈ।",
+    "The :attribute must be at least :length characters and contain at least one special character.": ":Attribute ਵਿੱਚ ਘੱਟੋ-ਘੱਟ :length ਅੱਖਰ ਹੋਣੇ ਚਾਹੀਦੇ ਹਨ ਅਤੇ ਘੱਟੋ-ਘੱਟ ਇੱਕ ਵਿਸ਼ੇਸ਼ ਅੱਖਰ ਹੋਣਾ ਚਾਹੀਦਾ ਹੈ।",
+    "The :attribute must be at least :length characters and contain at least one special character and one number.": ":Attribute ਵਿੱਚ ਘੱਟੋ-ਘੱਟ :length ਅੱਖਰ ਹੋਣੇ ਚਾਹੀਦੇ ਹਨ ਅਤੇ ਘੱਟੋ-ਘੱਟ ਇੱਕ ਵਿਸ਼ੇਸ਼ ਅੱਖਰ ਅਤੇ ਇੱਕ ਨੰਬਰ ਹੋਣਾ ਚਾਹੀਦਾ ਹੈ।",
+    "The :attribute must be at least :length characters and contain at least one uppercase character, one number, and one special character.": ":Attribute ਵਿੱਚ ਘੱਟੋ-ਘੱਟ :length ਅੱਖਰ ਹੋਣੇ ਚਾਹੀਦੇ ਹਨ ਅਤੇ ਘੱਟੋ-ਘੱਟ ਇੱਕ ਵੱਡੇ ਅੱਖਰ, ਇੱਕ ਨੰਬਰ, ਅਤੇ ਇੱਕ ਵਿਸ਼ੇਸ਼ ਅੱਖਰ ਹੋਣਾ ਚਾਹੀਦਾ ਹੈ।",
+    "The :attribute must be at least :length characters and contain at least one uppercase character.": ":Attribute ਵਿੱਚ ਘੱਟੋ-ਘੱਟ :length ਅੱਖਰ ਹੋਣੇ ਚਾਹੀਦੇ ਹਨ ਅਤੇ ਘੱਟੋ-ਘੱਟ ਇੱਕ ਵੱਡਾ ਅੱਖਰ ਹੋਣਾ ਚਾਹੀਦਾ ਹੈ।",
+    "The :attribute must be at least :length characters and contain at least one uppercase character and one number.": ":Attribute ਵਿੱਚ ਘੱਟੋ-ਘੱਟ :length ਅੱਖਰ ਹੋਣੇ ਚਾਹੀਦੇ ਹਨ ਅਤੇ ਘੱਟੋ-ਘੱਟ ਇੱਕ ਵੱਡੇ ਅੱਖਰ ਅਤੇ ਇੱਕ ਨੰਬਰ ਹੋਣਾ ਚਾਹੀਦਾ ਹੈ।",
+    "The :attribute must be at least :length characters and contain at least one uppercase character and one special character.": ":Attribute ਵਿੱਚ ਘੱਟੋ-ਘੱਟ :length ਅੱਖਰ ਹੋਣੇ ਚਾਹੀਦੇ ਹਨ ਅਤੇ ਘੱਟੋ-ਘੱਟ ਇੱਕ ਅਪਰਕੇਸ ਅੱਖਰ ਅਤੇ ਇੱਕ ਵਿਸ਼ੇਸ਼ ਅੱਖਰ ਹੋਣਾ ਚਾਹੀਦਾ ਹੈ।",
+    "The :attribute must be a valid role.": ":Attribute ਇੱਕ ਵੈਧ ਭੂਮਿਕਾ ਹੋਣੀ ਚਾਹੀਦੀ ਹੈ।",
     "The account’s data will be permanently deleted from our servers within 30 days and from all backups within 60 days.": "ਖਾਤੇ ਦਾ ਡੇਟਾ 30 ਦਿਨਾਂ ਦੇ ਅੰਦਰ ਸਾਡੇ ਸਰਵਰਾਂ ਤੋਂ ਅਤੇ 60 ਦਿਨਾਂ ਦੇ ਅੰਦਰ ਸਾਰੇ ਬੈਕਅੱਪਾਂ ਤੋਂ ਸਥਾਈ ਤੌਰ ’ਤੇ ਮਿਟਾ ਦਿੱਤਾ ਜਾਵੇਗਾ।",
     "The address type has been created": "ਐਡਰੈੱਸ ਦੀ ਕਿਸਮ ਬਣਾਈ ਗਈ ਹੈ",
     "The address type has been deleted": "ਪਤਾ ਕਿਸਮ ਮਿਟਾ ਦਿੱਤੀ ਗਈ ਹੈ",
@@ -1095,7 +1094,6 @@
     "Title": "ਸਿਰਲੇਖ",
     "to": "ਨੂੰ",
     "To finish enabling two factor authentication, scan the following QR code using your phone's authenticator application or enter the setup key and provide the generated OTP code.": "ਦੋ ਫੈਕਟਰ ਪ੍ਰਮਾਣੀਕਰਨ ਨੂੰ ਸਮਰੱਥ ਕਰਨ ਲਈ, ਆਪਣੇ ਫ਼ੋਨ ਦੀ ਪ੍ਰਮਾਣਿਕਤਾ ਐਪਲੀਕੇਸ਼ਨ ਦੀ ਵਰਤੋਂ ਕਰਕੇ ਹੇਠਾਂ ਦਿੱਤੇ QR ਕੋਡ ਨੂੰ ਸਕੈਨ ਕਰੋ ਜਾਂ ਸੈੱਟਅੱਪ ਕੁੰਜੀ ਦਾਖਲ ਕਰੋ ਅਤੇ ਤਿਆਰ ਕੀਤਾ OTP ਕੋਡ ਪ੍ਰਦਾਨ ਕਰੋ।",
-    "To finish enabling two factor authentication, scan the following QR code using your phone’s authenticator application or enter the setup key and provide the generated OTP code.": "ਦੋ ਫੈਕਟਰ ਪ੍ਰਮਾਣਿਕਤਾ ਨੂੰ ਸਮਰੱਥ ਕਰਨ ਲਈ, ਆਪਣੇ ਫ਼ੋਨ ਦੀ ਪ੍ਰਮਾਣਿਕਤਾ ਐਪਲੀਕੇਸ਼ਨ ਦੀ ਵਰਤੋਂ ਕਰਕੇ ਹੇਠਾਂ ਦਿੱਤੇ QR ਕੋਡ ਨੂੰ ਸਕੈਨ ਕਰੋ ਜਾਂ ਸੈੱਟਅੱਪ ਕੁੰਜੀ ਦਾਖਲ ਕਰੋ ਅਤੇ ਤਿਆਰ ਕੀਤਾ OTP ਕੋਡ ਪ੍ਰਦਾਨ ਕਰੋ।",
     "Toggle navigation": "ਨੈਵੀਗੇਸ਼ਨ ਨੂੰ ਟੌਗਲ ਕਰੋ",
     "To hear their story": "ਉਹਨਾਂ ਦੀ ਕਹਾਣੀ ਸੁਣਨ ਲਈ",
     "Token Name": "ਟੋਕਨ ਨਾਮ",
@@ -1145,7 +1143,6 @@
     "updated the religion": "ਧਰਮ ਨੂੰ ਅਪਡੇਟ ਕੀਤਾ",
     "Update Password": "ਪਾਸਵਰਡ ਅੱਪਡੇਟ ਕਰੋ",
     "Update your account's profile information and email address.": "ਆਪਣੇ ਖਾਤੇ ਦੀ ਪ੍ਰੋਫਾਈਲ ਜਾਣਕਾਰੀ ਅਤੇ ਈਮੇਲ ਪਤਾ ਅੱਪਡੇਟ ਕਰੋ।",
-    "Update your account’s profile information and email address.": "ਆਪਣੇ ਖਾਤੇ ਦੀ ਪ੍ਰੋਫਾਈਲ ਜਾਣਕਾਰੀ ਅਤੇ ਈਮੇਲ ਪਤਾ ਅੱਪਡੇਟ ਕਰੋ।",
     "Upload photo as avatar": "ਅਵਤਾਰ ਵਜੋਂ ਫੋਟੋ ਅੱਪਲੋਡ ਕਰੋ",
     "Use": "ਵਰਤੋ",
     "Use an authentication code": "ਇੱਕ ਪ੍ਰਮਾਣੀਕਰਨ ਕੋਡ ਦੀ ਵਰਤੋਂ ਕਰੋ",
@@ -1199,7 +1196,7 @@
     "We’ll send an email to this email address that you will need to confirm before we can send notifications to this address.": "ਅਸੀਂ ਇਸ ਈਮੇਲ ਪਤੇ ’ਤੇ ਇੱਕ ਈਮੇਲ ਭੇਜਾਂਗੇ ਜਿਸਦੀ ਪੁਸ਼ਟੀ ਕਰਨ ਦੀ ਲੋੜ ਪਵੇਗੀ ਇਸ ਤੋਂ ਪਹਿਲਾਂ ਕਿ ਅਸੀਂ ਇਸ ਪਤੇ ’ਤੇ ਸੂਚਨਾਵਾਂ ਭੇਜ ਸਕੀਏ।",
     "What happens now?": "ਹੁਣ ਕੀ ਹੁੰਦਾ ਹੈ?",
     "What is the loan?": "ਕਰਜ਼ਾ ਕੀ ਹੈ?",
-    "What permission should :name have?": ":name ਕੋਲ ਕਿਹੜੀ ਇਜਾਜ਼ਤ ਹੋਣੀ ਚਾਹੀਦੀ ਹੈ?",
+    "What permission should :name have?": ":Name ਕੋਲ ਕਿਹੜੀ ਇਜਾਜ਼ਤ ਹੋਣੀ ਚਾਹੀਦੀ ਹੈ?",
     "What permission should the user have?": "ਉਪਭੋਗਤਾ ਨੂੰ ਕਿਹੜੀ ਇਜਾਜ਼ਤ ਹੋਣੀ ਚਾਹੀਦੀ ਹੈ?",
     "Whatsapp": "Whatsapp",
     "What should we use to display maps?": "ਸਾਨੂੰ ਨਕਸ਼ੇ ਦਿਖਾਉਣ ਲਈ ਕੀ ਵਰਤਣਾ ਚਾਹੀਦਾ ਹੈ?",
