--- a/lang/te.json
+++ b/lang/te.json
@@ -125,7 +125,7 @@
     "All contacts in the vault": "ఖజానాలోని అన్ని పరిచయాలు",
     "All files": "అన్ని ఫైల్‌లు",
     "All groups in the vault": "ఖజానాలోని అన్ని సమూహాలు",
-    "All journal metrics in :name": ":nameలోని అన్ని జర్నల్ మెట్రిక్‌లు",
+    "All journal metrics in :name": ":Nameలోని అన్ని జర్నల్ మెట్రిక్‌లు",
     "All of the people that are part of this team.": "ఈ బృందంలో భాగమైన వ్యక్తులందరూ.",
     "All rights reserved.": "అన్ని హక్కులు ప్రత్యేకించబడ్డాయి.",
     "All tags": "అన్ని ట్యాగ్‌లు",
@@ -154,7 +154,7 @@
     "All the relationship types": "అన్ని రకాల సంబంధాలు",
     "All the religions": "అన్ని మతాలు",
     "All the reports": "అన్ని నివేదికలు",
-    "All the slices of life in :name": ":nameలో జీవితంలోని అన్ని ముక్కలు",
+    "All the slices of life in :name": ":Nameలో జీవితంలోని అన్ని ముక్కలు",
     "All the tags used in the vault": "ఖజానాలో ఉపయోగించే అన్ని ట్యాగ్‌లు",
     "All the templates": "అన్ని టెంప్లేట్లు",
     "All the vaults": "అన్ని సొరంగాలు",
@@ -439,7 +439,6 @@
     "For:": "దీని కోసం:",
     "For advice": "సలహా కోసం",
     "Forbidden": "నిషేధించబడింది",
-    "Forgot password?": "పాస్‌వర్డ్ మర్చిపోయారా?",
     "Forgot your password?": "మీ పాస్వర్డ్ మర్చిపోయారా?",
     "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "మీ పాస్వర్డ్ మర్చిపోయారా? ఏమి ఇబ్బంది లేదు. మీ ఇమెయిల్ చిరునామాను మాకు తెలియజేయండి మరియు మేము మీకు కొత్త దాన్ని ఎంచుకోవడానికి అనుమతించే పాస్‌వర్డ్ రీసెట్ లింక్‌ను ఇమెయిల్ చేస్తాము.",
     "For your security, please confirm your password to continue.": "మీ భద్రత కోసం, దయచేసి కొనసాగించడానికి మీ పాస్‌వర్డ్‌ను నిర్ధారించండి.",
@@ -700,7 +699,7 @@
     "per/per": "ప్రతి/ప్రతి",
     "Permanently delete this team.": "ఈ బృందాన్ని శాశ్వతంగా తొలగించండి.",
     "Permanently delete your account.": "మీ ఖాతాను శాశ్వతంగా తొలగించండి.",
-    "Permission for :name": ":name కోసం అనుమతి",
+    "Permission for :name": ":Name కోసం అనుమతి",
     "Permissions": "అనుమతులు",
     "Personal": "వ్యక్తిగత",
     "Personalize your account": "మీ ఖాతాను వ్యక్తిగతీకరించండి",
@@ -748,8 +747,8 @@
     "Profile": "ప్రొఫైల్",
     "Profile and security": "ప్రొఫైల్ మరియు భద్రత",
     "Profile Information": "ప్రొఫైల్ సమాచారం",
-    "Profile of :name": ":name యొక్క ప్రొఫైల్",
-    "Profile page of :name": ":name యొక్క ప్రొఫైల్ పేజీ",
+    "Profile of :name": ":Name యొక్క ప్రొఫైల్",
+    "Profile page of :name": ":Name యొక్క ప్రొఫైల్ పేజీ",
     "Pronoun": "సర్వనామం",
     "Pronouns": "సర్వనామాలు",
     "Pronouns are basically how we identify ourselves apart from our name. It’s how someone refers to you in conversation.": "సర్వనామాలు ప్రాథమికంగా మన పేరు కాకుండా మనల్ని మనం ఎలా గుర్తించుకుంటాం. సంభాషణలో ఎవరైనా మిమ్మల్ని ఎలా సూచిస్తారు.",
@@ -783,7 +782,7 @@
     "Religions": "మతాలు",
     "Religions is all about faith.": "మతాలన్నీ విశ్వాసానికి సంబంధించినవి.",
     "Remember me": "నన్ను గుర్తు పెట్టుకో",
-    "Reminder for :name": ":name కోసం రిమైండర్",
+    "Reminder for :name": ":Name కోసం రిమైండర్",
     "Reminders": "రిమైండర్‌లు",
     "Reminders for the next 30 days": "తదుపరి 30 రోజుల కోసం రిమైండర్‌లు",
     "Remind me about this date every year": "ప్రతి సంవత్సరం ఈ తేదీ గురించి నాకు గుర్తు చేయండి",
@@ -894,15 +893,15 @@
     "Thanks,": "ధన్యవాదాలు,",
     "Thanks for giving Monica a try.": "Monica ఒకసారి ప్రయత్నించినందుకు ధన్యవాదాలు.",
     "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "సైన్ అప్ చేసినందుకు ధన్యవాదాలు! ప్రారంభించడానికి ముందు, మేము మీకు ఇమెయిల్ పంపిన లింక్‌పై క్లిక్ చేయడం ద్వారా మీరు మీ ఇమెయిల్ చిరునామాను ధృవీకరించగలరా? మీరు ఇమెయిల్‌ను అందుకోకుంటే, మేము మీకు మరొకటి పంపుతాము.",
-    "The :attribute must be at least :length characters.": ":attribute తప్పనిసరిగా కనీసం :length అక్షరాలు ఉండాలి.",
-    "The :attribute must be at least :length characters and contain at least one number.": ":attribute తప్పనిసరిగా కనీసం :length అక్షరాలు ఉండాలి మరియు కనీసం ఒక సంఖ్యను కలిగి ఉండాలి.",
-    "The :attribute must be at least :length characters and contain at least one special character.": ":attribute తప్పనిసరిగా కనీసం :length అక్షరాలు ఉండాలి మరియు కనీసం ఒక ప్రత్యేక అక్షరాన్ని కలిగి ఉండాలి.",
-    "The :attribute must be at least :length characters and contain at least one special character and one number.": ":attribute తప్పనిసరిగా కనీసం :length అక్షరాలు ఉండాలి మరియు కనీసం ఒక ప్రత్యేక అక్షరం మరియు ఒక సంఖ్యను కలిగి ఉండాలి.",
-    "The :attribute must be at least :length characters and contain at least one uppercase character, one number, and one special character.": ":attribute తప్పనిసరిగా కనీసం :length అక్షరాలు ఉండాలి మరియు కనీసం ఒక పెద్ద అక్షరం, ఒక సంఖ్య మరియు ఒక ప్రత్యేక అక్షరాన్ని కలిగి ఉండాలి.",
-    "The :attribute must be at least :length characters and contain at least one uppercase character.": ":attribute తప్పనిసరిగా కనీసం :length అక్షరాలు ఉండాలి మరియు కనీసం ఒక పెద్ద అక్షరాన్ని కలిగి ఉండాలి.",
-    "The :attribute must be at least :length characters and contain at least one uppercase character and one number.": ":attribute తప్పనిసరిగా కనీసం :length అక్షరాలు ఉండాలి మరియు కనీసం ఒక పెద్ద అక్షరం మరియు ఒక సంఖ్యను కలిగి ఉండాలి.",
-    "The :attribute must be at least :length characters and contain at least one uppercase character and one special character.": ":attribute తప్పనిసరిగా కనీసం :length అక్షరాలు ఉండాలి మరియు కనీసం ఒక పెద్ద అక్షరం మరియు ఒక ప్రత్యేక అక్షరాన్ని కలిగి ఉండాలి.",
-    "The :attribute must be a valid role.": ":attribute తప్పనిసరిగా చెల్లుబాటు అయ్యే పాత్ర అయి ఉండాలి.",
+    "The :attribute must be at least :length characters.": ":Attribute తప్పనిసరిగా కనీసం :length అక్షరాలు ఉండాలి.",
+    "The :attribute must be at least :length characters and contain at least one number.": ":Attribute తప్పనిసరిగా కనీసం :length అక్షరాలు ఉండాలి మరియు కనీసం ఒక సంఖ్యను కలిగి ఉండాలి.",
+    "The :attribute must be at least :length characters and contain at least one special character.": ":Attribute తప్పనిసరిగా కనీసం :length అక్షరాలు ఉండాలి మరియు కనీసం ఒక ప్రత్యేక అక్షరాన్ని కలిగి ఉండాలి.",
+    "The :attribute must be at least :length characters and contain at least one special character and one number.": ":Attribute తప్పనిసరిగా కనీసం :length అక్షరాలు ఉండాలి మరియు కనీసం ఒక ప్రత్యేక అక్షరం మరియు ఒక సంఖ్యను కలిగి ఉండాలి.",
+    "The :attribute must be at least :length characters and contain at least one uppercase character, one number, and one special character.": ":Attribute తప్పనిసరిగా కనీసం :length అక్షరాలు ఉండాలి మరియు కనీసం ఒక పెద్ద అక్షరం, ఒక సంఖ్య మరియు ఒక ప్రత్యేక అక్షరాన్ని కలిగి ఉండాలి.",
+    "The :attribute must be at least :length characters and contain at least one uppercase character.": ":Attribute తప్పనిసరిగా కనీసం :length అక్షరాలు ఉండాలి మరియు కనీసం ఒక పెద్ద అక్షరాన్ని కలిగి ఉండాలి.",
+    "The :attribute must be at least :length characters and contain at least one uppercase character and one number.": ":Attribute తప్పనిసరిగా కనీసం :length అక్షరాలు ఉండాలి మరియు కనీసం ఒక పెద్ద అక్షరం మరియు ఒక సంఖ్యను కలిగి ఉండాలి.",
+    "The :attribute must be at least :length characters and contain at least one uppercase character and one special character.": ":Attribute తప్పనిసరిగా కనీసం :length అక్షరాలు ఉండాలి మరియు కనీసం ఒక పెద్ద అక్షరం మరియు ఒక ప్రత్యేక అక్షరాన్ని కలిగి ఉండాలి.",
+    "The :attribute must be a valid role.": ":Attribute తప్పనిసరిగా చెల్లుబాటు అయ్యే పాత్ర అయి ఉండాలి.",
     "The account’s data will be permanently deleted from our servers within 30 days and from all backups within 60 days.": "ఖాతా డేటా 30 రోజులలోపు మా సర్వర్‌ల నుండి మరియు 60 రోజులలోపు అన్ని బ్యాకప్‌ల నుండి శాశ్వతంగా తొలగించబడుతుంది.",
     "The address type has been created": "చిరునామా రకం సృష్టించబడింది",
     "The address type has been deleted": "చిరునామా రకం తొలగించబడింది",
@@ -1095,7 +1094,6 @@
     "Title": "శీర్షిక",
     "to": "కు",
     "To finish enabling two factor authentication, scan the following QR code using your phone's authenticator application or enter the setup key and provide the generated OTP code.": "రెండు కారకాల ప్రమాణీకరణను ప్రారంభించడాన్ని పూర్తి చేయడానికి, మీ ఫోన్ యొక్క ప్రామాణీకరణ అప్లికేషన్‌ను ఉపయోగించి క్రింది QR కోడ్‌ని స్కాన్ చేయండి లేదా సెటప్ కీని నమోదు చేసి, రూపొందించిన OTP కోడ్‌ను అందించండి.",
-    "To finish enabling two factor authentication, scan the following QR code using your phone’s authenticator application or enter the setup key and provide the generated OTP code.": "రెండు కారకాల ప్రమాణీకరణను ప్రారంభించడాన్ని పూర్తి చేయడానికి, మీ ఫోన్ యొక్క ప్రమాణీకరణ అప్లికేషన్‌ను ఉపయోగించి క్రింది QR కోడ్‌ని స్కాన్ చేయండి లేదా సెటప్ కీని నమోదు చేసి, రూపొందించిన OTP కోడ్‌ను అందించండి.",
     "Toggle navigation": "నావిగేషన్‌ని టోగుల్ చేయండి",
     "To hear their story": "వారి కథ వినడానికి",
     "Token Name": "టోకెన్ పేరు",
@@ -1145,7 +1143,6 @@
     "updated the religion": "మతాన్ని నవీకరించారు",
     "Update Password": "పాస్‌వర్డ్‌ని నవీకరించండి",
     "Update your account's profile information and email address.": "మీ ఖాతా ప్రొఫైల్ సమాచారం మరియు ఇమెయిల్ చిరునామాను నవీకరించండి.",
-    "Update your account’s profile information and email address.": "మీ ఖాతా ప్రొఫైల్ సమాచారం మరియు ఇమెయిల్ చిరునామాను నవీకరించండి.",
     "Upload photo as avatar": "ఫోటోను అవతార్‌గా అప్‌లోడ్ చేయండి",
     "Use": "వా డు",
     "Use an authentication code": "ప్రామాణీకరణ కోడ్‌ని ఉపయోగించండి",
@@ -1199,7 +1196,7 @@
     "We’ll send an email to this email address that you will need to confirm before we can send notifications to this address.": "మేము ఈ ఇమెయిల్ చిరునామాకు ఒక ఇమెయిల్‌ను పంపుతాము, మేము ఈ చిరునామాకు నోటిఫికేషన్‌లను పంపడానికి ముందు మీరు నిర్ధారించవలసి ఉంటుంది.",
     "What happens now?": "ఇప్పుడు ఏమి జరుగుతుంది?",
     "What is the loan?": "రుణం ఏమిటి?",
-    "What permission should :name have?": ":nameకి ఎలాంటి అనుమతి ఉండాలి?",
+    "What permission should :name have?": ":Nameకి ఎలాంటి అనుమతి ఉండాలి?",
     "What permission should the user have?": "వినియోగదారు ఏ అనుమతిని కలిగి ఉండాలి?",
     "Whatsapp": "Whatsapp",
     "What should we use to display maps?": "మ్యాప్‌లను ప్రదర్శించడానికి మనం ఏమి ఉపయోగించాలి?",
