--- a/lang/tr.json
+++ b/lang/tr.json
@@ -125,7 +125,7 @@
     "All contacts in the vault": "Kasadaki tüm kişiler",
     "All files": "Tüm dosyalar",
     "All groups in the vault": "Kasadaki tüm gruplar",
-    "All journal metrics in :name": ":name içindeki tüm günlük metrikleri",
+    "All journal metrics in :name": ":Name içindeki tüm günlük metrikleri",
     "All of the people that are part of this team.": "Bu ekibin parçası olan tüm kişiler.",
     "All rights reserved.": "Tüm hakları saklıdır.",
     "All tags": "Tüm etiketler",
@@ -154,7 +154,7 @@
     "All the relationship types": "Tüm ilişki türleri",
     "All the religions": "Bütün dinler",
     "All the reports": "Tüm raporlar",
-    "All the slices of life in :name": ":name’daki yaşamın tüm dilimleri",
+    "All the slices of life in :name": ":Name’daki yaşamın tüm dilimleri",
     "All the tags used in the vault": "Kasada kullanılan tüm etiketler",
     "All the templates": "Tüm şablonlar",
     "All the vaults": "Tüm kasalar",
@@ -439,7 +439,6 @@
     "For:": "İçin:",
     "For advice": "Tavsiye için",
     "Forbidden": "Yasak",
-    "Forgot password?": "Parolanızı mı unuttunuz?",
     "Forgot your password?": "Parolanızı mı unuttunuz?",
     "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "Parolanızı mı unuttunuz? Sorun değil. Sadece e-posta adresinizi bize söyleyin size yeni parolanızı belirleyebileceğiniz bir parola sıfırlama linki gönderelim.",
     "For your security, please confirm your password to continue.": "Güvenliğiniz için lütfen devam etmek için parolanızı onaylayın.",
@@ -498,7 +497,7 @@
     "How should we display dates": "Tarihleri nasıl göstermeliyiz",
     "How should we display distance values": "Mesafe değerlerini nasıl göstermeliyiz?",
     "How should we display numerical values": "Sayısal değerleri nasıl göstermeliyiz?",
-    "I agree to the :terms and :policy": ":terms ve :policy’yi kabul ediyorum",
+    "I agree to the :terms and :policy": ":Terms ve :policy’yi kabul ediyorum",
     "I agree to the :terms_of_service and :privacy_policy": ":Terms_of_service ve :privacy_policy’yi kabul ediyorum",
     "I am grateful for": "için müteşekkirim",
     "I called": "aradım",
@@ -699,7 +698,7 @@
     "per/per": "başına/başına",
     "Permanently delete this team.": "Bu ekibi kalıcı olarak sil",
     "Permanently delete your account.": "Hesabını kalıcı olarak sil",
-    "Permission for :name": ":name için izin",
+    "Permission for :name": ":Name için izin",
     "Permissions": "İzinler",
     "Personal": "Kişisel",
     "Personalize your account": "Hesabınızı kişiselleştirin",
@@ -747,8 +746,8 @@
     "Profile": "Profil",
     "Profile and security": "Profil ve güvenlik",
     "Profile Information": "Profil Bilgileri",
-    "Profile of :name": ":name profili",
-    "Profile page of :name": ":name profil sayfası",
+    "Profile of :name": ":Name profili",
+    "Profile page of :name": ":Name profil sayfası",
     "Pronoun": "Zamir",
     "Pronouns": "Zamirler",
     "Pronouns are basically how we identify ourselves apart from our name. It’s how someone refers to you in conversation.": "Zamirler temel olarak ismimizden ayrı olarak kendimizi nasıl tanımladığımızdır. Birinin konuşma sırasında sizden bu şekilde bahsetmesi.",
@@ -782,7 +781,7 @@
     "Religions": "Dinler",
     "Religions is all about faith.": "Dinler tamamen inançla ilgilidir.",
     "Remember me": "Beni hatırla",
-    "Reminder for :name": ":name için hatırlatıcı",
+    "Reminder for :name": ":Name için hatırlatıcı",
     "Reminders": "Hatırlatıcılar",
     "Reminders for the next 30 days": "Önümüzdeki 30 gün için hatırlatıcılar",
     "Remind me about this date every year": "Bana her yıl bu tarihi hatırlat",
@@ -1095,7 +1094,6 @@
     "Title": "Başlık",
     "to": "a",
     "To finish enabling two factor authentication, scan the following QR code using your phone's authenticator application or enter the setup key and provide the generated OTP code.": "İki faktörlü kimlik doğrulamayı etkinleştirmeyi tamamlamak için telefonunuzun kimlik doğrulama uygulamasını kullanarak aşağıdaki QR kodunu tarayın veya kurulum anahtarını girin ve oluşturulan OTP kodunu sağlayın.",
-    "To finish enabling two factor authentication, scan the following QR code using your phone’s authenticator application or enter the setup key and provide the generated OTP code.": "İki faktörlü kimlik doğrulamayı etkinleştirmeyi tamamlamak için telefonunuzun kimlik doğrulama uygulamasını kullanarak aşağıdaki QR kodunu tarayın veya kurulum anahtarını girin ve oluşturulan OTP kodunu girin.",
     "Toggle navigation": "Menüyü Aç/Kapat",
     "To hear their story": "Hikayelerini dinlemek için",
     "Token Name": "Jeton İsmi",
@@ -1144,7 +1142,6 @@
     "updated the religion": "dini güncelledim",
     "Update Password": "Parolayı Güncelle",
     "Update your account's profile information and email address.": "Hesabınızın profil bilgilerini ve e-posta adresini güncelleyin.",
-    "Update your account’s profile information and email address.": "Hesabınızın profil bilgilerini ve e-posta adresini güncelleyin.",
     "Upload photo as avatar": "Fotoğrafı avatar olarak yükle",
     "Use": "Kullanmak",
     "Use an authentication code": "Bir kimlik doğrulama kodu kullanın",
@@ -1198,7 +1195,7 @@
     "We’ll send an email to this email address that you will need to confirm before we can send notifications to this address.": "Bu e-posta adresine, bu adrese bildirim gönderebilmemiz için onaylamanız gereken bir e-posta göndereceğiz.",
     "What happens now?": "Şimdi ne olacak?",
     "What is the loan?": "Kredi nedir?",
-    "What permission should :name have?": ":name hangi izne sahip olmalı?",
+    "What permission should :name have?": ":Name hangi izne sahip olmalı?",
     "What permission should the user have?": "Kullanıcının hangi izne sahip olması gerekir?",
     "Whatsapp": "Naber",
     "What should we use to display maps?": "Haritaları görüntülemek için ne kullanmalıyız?",
