--- a/lang/ur.json
+++ b/lang/ur.json
@@ -125,7 +125,7 @@
     "All contacts in the vault": "والٹ میں تمام رابطے",
     "All files": "تمام فائلیں",
     "All groups in the vault": "والٹ میں تمام گروپس",
-    "All journal metrics in :name": ":name میں تمام جرنل میٹرکس",
+    "All journal metrics in :name": ":Name میں تمام جرنل میٹرکس",
     "All of the people that are part of this team.": "تمام ہے کہ لوگوں کی اس ٹیم کا حصہ.",
     "All rights reserved.": "تمام حقوق محفوظ ہیں.",
     "All tags": "تمام ٹیگز",
@@ -439,7 +439,6 @@
     "For:": "کے لیے:",
     "For advice": "مشورہ کے لیے",
     "Forbidden": "حرام",
-    "Forgot password?": "پاسورڈ بھول گے؟",
     "Forgot your password?": "پاسورڈ بھول گئے ؟",
     "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "پاسورڈ بھول گئے ؟  کوئی مسئلہ نہیں. صرف ہمیں پتہ ہے کہ آپ کے ای میل ایڈریس اور ہم نے آپ کو ای میل ایک پاس ورڈ ری سیٹ کریں کے لنک کی اجازت دے گا کہ آپ کو منتخب کرنے کے لئے ایک نئی ایک.",
     "For your security, please confirm your password to continue.": "آپ کی سیکورٹی کے لئے, براہ مہربانی اس بات کی تصدیق آپ کے پاس ورڈ کے لئے جاری رکھنے کے لئے.",
@@ -699,7 +698,7 @@
     "per/per": "فی/فی",
     "Permanently delete this team.": "مستقل طور پر خارج کر دیں اس کی ٹیم.",
     "Permanently delete your account.": "مستقل طور پر آپ کے اکاؤنٹ کو خارج.",
-    "Permission for :name": ":name کے لیے اجازت",
+    "Permission for :name": ":Name کے لیے اجازت",
     "Permissions": "اجازت",
     "Personal": "ذاتی",
     "Personalize your account": "اپنے اکاؤنٹ کو ذاتی بنائیں",
@@ -747,8 +746,8 @@
     "Profile": "پروفائل",
     "Profile and security": "پروفائل اور سیکیورٹی",
     "Profile Information": "پروفائل کی معلومات",
-    "Profile of :name": ":name کا پروفائل",
-    "Profile page of :name": ":name کا پروفائل صفحہ",
+    "Profile of :name": ":Name کا پروفائل",
+    "Profile page of :name": ":Name کا پروفائل صفحہ",
     "Pronoun": "ضمیر",
     "Pronouns": "ضمیر",
     "Pronouns are basically how we identify ourselves apart from our name. It’s how someone refers to you in conversation.": "ضمیر بنیادی طور پر یہ ہیں کہ ہم اپنے نام کے علاوہ خود کو کس طرح پہچانتے ہیں۔ اس طرح کوئی شخص گفتگو میں آپ کا حوالہ دیتا ہے۔",
@@ -782,7 +781,7 @@
     "Religions": "مذاہب",
     "Religions is all about faith.": "مذاہب کا تعلق ایمان سے ہے۔",
     "Remember me": "مجھے یاد رکھیں",
-    "Reminder for :name": ":name کے لیے یاد دہانی",
+    "Reminder for :name": ":Name کے لیے یاد دہانی",
     "Reminders": "یاد دہانیاں",
     "Reminders for the next 30 days": "اگلے 30 دنوں کے لیے یاد دہانیاں",
     "Remind me about this date every year": "مجھے ہر سال اس تاریخ کے بارے میں یاد دلائیں۔",
@@ -1095,7 +1094,6 @@
     "Title": "عنوان",
     "to": "کرنے کے لئے",
     "To finish enabling two factor authentication, scan the following QR code using your phone's authenticator application or enter the setup key and provide the generated OTP code.": "دو عنصر کی تصدیق کو فعال کرنے کے لیے، اپنے فون کی تصدیق کنندہ ایپلیکیشن کا استعمال کرتے ہوئے درج ذیل QR کوڈ کو اسکین کریں یا سیٹ اپ کلید درج کریں اور تیار کردہ OTP کوڈ فراہم کریں۔",
-    "To finish enabling two factor authentication, scan the following QR code using your phone’s authenticator application or enter the setup key and provide the generated OTP code.": "دو عنصر کی توثیق کو فعال کرنے کے لیے، اپنے فون کی تصدیق کنندہ ایپلیکیشن کا استعمال کرتے ہوئے درج ذیل QR کوڈ کو اسکین کریں یا سیٹ اپ کلید درج کریں اور تیار کردہ OTP کوڈ فراہم کریں۔",
     "Toggle navigation": "ٹوگل مواد",
     "To hear their story": "ان کی کہانی سننے کے لیے",
     "Token Name": "ٹوکن کے نام",
@@ -1144,7 +1142,6 @@
     "updated the religion": "مذہب کو اپ ڈیٹ کیا",
     "Update Password": "پاس ورڈ کو اپ ڈیٹ",
     "Update your account's profile information and email address.": "اپ ڈیٹ کریں آپ کی اکاؤنٹ کے پروفائل کی معلومات اور ای میل ایڈریس.",
-    "Update your account’s profile information and email address.": "اپنے اکاؤنٹ کی پروفائل کی معلومات اور ای میل ایڈریس کو اپ ڈیٹ کریں۔",
     "Upload photo as avatar": "تصویر بطور اوتار اپ لوڈ کریں۔",
     "Use": "استعمال کریں۔",
     "Use an authentication code": "استعمال کی تصدیق کے کوڈ",
@@ -1198,7 +1195,7 @@
     "We’ll send an email to this email address that you will need to confirm before we can send notifications to this address.": "ہم اس ای میل پتے پر ایک ای میل بھیجیں گے جس کی آپ کو تصدیق کرنی ہوگی اس سے پہلے کہ ہم اس پتے پر اطلاعات بھیج سکیں۔",
     "What happens now?": "اب کیا ہوگا؟",
     "What is the loan?": "قرض کیا ہے؟",
-    "What permission should :name have?": ":name کو کیا اجازت ہونی چاہیے؟",
+    "What permission should :name have?": ":Name کو کیا اجازت ہونی چاہیے؟",
     "What permission should the user have?": "صارف کو کیا اجازت ہونی چاہیے؟",
     "Whatsapp": "واٹس ایپ",
     "What should we use to display maps?": "ہمیں نقشے دکھانے کے لیے کیا استعمال کرنا چاہیے؟",
