--- a/lang/vi.json
+++ b/lang/vi.json
@@ -439,7 +439,6 @@
     "For:": "Vì:",
     "For advice": "Để được tư vấn",
     "Forbidden": "Cấm Truy Cập",
-    "Forgot password?": "Quên mật khẩu?",
     "Forgot your password?": "Quên mật khẩu?",
     "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "Quên mật khẩu? Không vấn đề gì. Chỉ cần cho chúng tôi biết địa chỉ email của bạn và chúng tôi sẽ gửi cho bạn một liên kết đặt lại mật khẩu qua email cho phép bạn chọn một mật khẩu mới.",
     "For your security, please confirm your password to continue.": "Để bảo mật cho bạn, vui lòng xác nhận mật khẩu của bạn để tiếp tục.",
@@ -1095,7 +1094,6 @@
     "Title": "Tiêu đề",
     "to": "tới",
     "To finish enabling two factor authentication, scan the following QR code using your phone's authenticator application or enter the setup key and provide the generated OTP code.": "Để hoàn tất việc bật xác minh hai yếu tố, quét mã QR sau bằng ứng dụng xác minh trên điện thoại của bạn hoặc nhập khóa thiết lập và cung cấp mã OTP đã tạo.",
-    "To finish enabling two factor authentication, scan the following QR code using your phone’s authenticator application or enter the setup key and provide the generated OTP code.": "Để hoàn tất việc kích hoạt xác thực hai yếu tố, hãy quét mã QR sau bằng ứng dụng xác thực trên điện thoại của bạn hoặc nhập khóa thiết lập và cung cấp mã OTP đã tạo.",
     "Toggle navigation": "Chuyển hướng điều hướng",
     "To hear their story": "Để nghe câu chuyện của họ",
     "Token Name": "Tên Token",
@@ -1144,7 +1142,6 @@
     "updated the religion": "cập nhật tôn giáo",
     "Update Password": "Cập nhật mật khẩu",
     "Update your account's profile information and email address.": "Cập nhật thông tin hồ sơ tài khoản và địa chỉ email của bạn.",
-    "Update your account’s profile information and email address.": "Cập nhật thông tin hồ sơ và địa chỉ email của tài khoản của bạn.",
     "Upload photo as avatar": "Tải ảnh lên làm hình đại diện",
     "Use": "Sử dụng",
     "Use an authentication code": "Sử dụng mã xác minh",
@@ -1198,7 +1195,7 @@
     "We’ll send an email to this email address that you will need to confirm before we can send notifications to this address.": "Chúng tôi sẽ gửi email đến địa chỉ email này mà bạn cần xác nhận trước khi chúng tôi có thể gửi thông báo đến địa chỉ này.",
     "What happens now?": "Điều gì xảy ra bây giờ?",
     "What is the loan?": "Khoản vay là gì?",
-    "What permission should :name have?": ":name nên có quyền gì?",
+    "What permission should :name have?": ":Name nên có quyền gì?",
     "What permission should the user have?": "Người dùng nên có quyền gì?",
     "Whatsapp": "Whatsapp",
     "What should we use to display maps?": "Chúng ta nên sử dụng gì để hiển thị bản đồ?",
