--- a/lang/zh_CN.json
+++ b/lang/zh_CN.json
@@ -125,7 +125,7 @@
     "All contacts in the vault": "保险库中的所有联系人",
     "All files": "全部文件",
     "All groups in the vault": "库中的所有组",
-    "All journal metrics in :name": ":name 中的所有期刊指标",
+    "All journal metrics in :name": ":Name 中的所有期刊指标",
     "All of the people that are part of this team.": "所有的人都是这个团队的一部分。",
     "All rights reserved.": "版权所有。",
     "All tags": "所有标签",
@@ -154,7 +154,7 @@
     "All the relationship types": "所有关系类型",
     "All the religions": "所有宗教",
     "All the reports": "所有报告",
-    "All the slices of life in :name": ":name 中的所有生活片段",
+    "All the slices of life in :name": ":Name 中的所有生活片段",
     "All the tags used in the vault": "库中使用的所有标签",
     "All the templates": "所有模板",
     "All the vaults": "所有金库",
@@ -439,7 +439,6 @@
     "For:": "为了：",
     "For advice": "咨询",
     "Forbidden": "访问被拒绝",
-    "Forgot password?": "忘记密码？",
     "Forgot your password?": "忘记密码？",
     "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "忘记密码？没关系。输入您的电子邮件地址，我们将通过电子邮件向您发送密码重置链接，让您重置一个新的密码。",
     "For your security, please confirm your password to continue.": "为了您的安全，请确认您的密码以继续。",
@@ -699,7 +698,7 @@
     "per/per": "每/每",
     "Permanently delete this team.": "永久删除此团队",
     "Permanently delete your account.": "永久删除您的账户",
-    "Permission for :name": ":name 的权限",
+    "Permission for :name": ":Name 的权限",
     "Permissions": "权限",
     "Personal": "个人的",
     "Personalize your account": "个性化您的帐户",
@@ -747,8 +746,8 @@
     "Profile": "资料",
     "Profile and security": "个人资料和安全性",
     "Profile Information": "账户资料",
-    "Profile of :name": ":name 的个人资料",
-    "Profile page of :name": ":name 的个人资料页面",
+    "Profile of :name": ":Name 的个人资料",
+    "Profile page of :name": ":Name 的个人资料页面",
     "Pronoun": "代词",
     "Pronouns": "代词",
     "Pronouns are basically how we identify ourselves apart from our name. It’s how someone refers to you in conversation.": "代词基本上是我们除了名字之外识别自己的方式。这是某人在谈话中提及您的方式。",
@@ -782,7 +781,7 @@
     "Religions": "宗教",
     "Religions is all about faith.": "宗教就是信仰。",
     "Remember me": "记住我",
-    "Reminder for :name": ":name 的提醒",
+    "Reminder for :name": ":Name 的提醒",
     "Reminders": "提醒事项",
     "Reminders for the next 30 days": "未来 30 天的提醒",
     "Remind me about this date every year": "每年提醒我这个日期",
@@ -1095,7 +1094,6 @@
     "Title": "标题",
     "to": "至",
     "To finish enabling two factor authentication, scan the following QR code using your phone's authenticator application or enter the setup key and provide the generated OTP code.": "完成启用双因素认证，使用手机的认证应用程序扫描以下二维码，或者输入设置密钥并提供生成的 OTP 密码。",
-    "To finish enabling two factor authentication, scan the following QR code using your phone’s authenticator application or enter the setup key and provide the generated OTP code.": "要完成启用两因素身份验证，请使用手机的身份验证器应用程序扫描以下二维码，或输入设置密钥并提供生成的 OTP 代码。",
     "Toggle navigation": "切换导航",
     "To hear their story": "来听听他们的故事",
     "Token Name": "令牌名称",
@@ -1144,7 +1142,6 @@
     "updated the religion": "更新了宗教",
     "Update Password": "更新密码",
     "Update your account's profile information and email address.": "更新您的账户资料和电子邮件地址。",
-    "Update your account’s profile information and email address.": "更新您帐户的个人资料信息和电子邮件地址。",
     "Upload photo as avatar": "上传照片作为头像",
     "Use": "使用",
     "Use an authentication code": "使用验证码",
@@ -1198,7 +1195,7 @@
     "We’ll send an email to this email address that you will need to confirm before we can send notifications to this address.": "我们将向此电子邮件地址发送一封电子邮件，您需要确认该电子邮件，然后我们才能向此地址发送通知。",
     "What happens now?": "现在会发生什么？",
     "What is the loan?": "什么是贷款？",
-    "What permission should :name have?": ":name 应该拥有什么权限？",
+    "What permission should :name have?": ":Name 应该拥有什么权限？",
     "What permission should the user have?": "用户应该拥有什么权限？",
     "Whatsapp": "Whatsapp",
     "What should we use to display maps?": "我们应该用什么来显示地图？",
