--- a/lang/zh_TW.json
+++ b/lang/zh_TW.json
@@ -125,7 +125,7 @@
     "All contacts in the vault": "保險庫中的所有聯絡人",
     "All files": "全部文件",
     "All groups in the vault": "庫中的所有組",
-    "All journal metrics in :name": ":name 中的所有期刊指標",
+    "All journal metrics in :name": ":Name 中的所有期刊指標",
     "All of the people that are part of this team.": "所有人都是這個團隊的一部分。",
     "All rights reserved.": "版權所有。",
     "All tags": "所有標籤",
@@ -154,7 +154,7 @@
     "All the relationship types": "所有關係類型",
     "All the religions": "所有宗教",
     "All the reports": "所有報告",
-    "All the slices of life in :name": ":name 中的所有生活片段",
+    "All the slices of life in :name": ":Name 中的所有生活片段",
     "All the tags used in the vault": "庫中使用的所有標籤",
     "All the templates": "所有模板",
     "All the vaults": "所有金庫",
@@ -439,7 +439,6 @@
     "For:": "為了：",
     "For advice": "諮詢",
     "Forbidden": "拒絕存取",
-    "Forgot password?": "忘記密碼？",
     "Forgot your password?": "忘記密碼？",
     "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "忘記密碼？沒關係。請輸入您的電子郵件地址，我們將透過電子郵件發送密碼重置連結給您，讓您重新設定一個新的密碼。",
     "For your security, please confirm your password to continue.": "為了您的安全，請確認您的密碼以繼續。",
@@ -699,7 +698,7 @@
     "per/per": "每/每",
     "Permanently delete this team.": "永久刪除此團隊",
     "Permanently delete your account.": "永久刪除您的帳號",
-    "Permission for :name": ":name 的權限",
+    "Permission for :name": ":Name 的權限",
     "Permissions": "權限",
     "Personal": "個人的",
     "Personalize your account": "個性化您的帳戶",
@@ -747,8 +746,8 @@
     "Profile": "個人資料",
     "Profile and security": "個人資料和安全性",
     "Profile Information": "個人資料",
-    "Profile of :name": ":name 的個人資料",
-    "Profile page of :name": ":name 的個人資料頁面",
+    "Profile of :name": ":Name 的個人資料",
+    "Profile page of :name": ":Name 的個人資料頁面",
     "Pronoun": "代名詞",
     "Pronouns": "代名詞",
     "Pronouns are basically how we identify ourselves apart from our name. It’s how someone refers to you in conversation.": "代名詞基本上是我們除了名字之外識別自己的方式。這是某人在談話中提及您的方式。",
@@ -782,7 +781,7 @@
     "Religions": "宗教",
     "Religions is all about faith.": "宗教就是信仰。",
     "Remember me": "記住我",
-    "Reminder for :name": ":name 的提醒",
+    "Reminder for :name": ":Name 的提醒",
     "Reminders": "提醒事項",
     "Reminders for the next 30 days": "未來 30 天的提醒",
     "Remind me about this date every year": "每年提醒我這個日期",
@@ -1095,7 +1094,6 @@
     "Title": "標題",
     "to": "至",
     "To finish enabling two factor authentication, scan the following QR code using your phone's authenticator application or enter the setup key and provide the generated OTP code.": "完成雙重要素驗證，使用您的手機的驗證器應用程式掃描以下的 QR code，或輸入設定密鑰並提供產生的 OTP 碼。",
-    "To finish enabling two factor authentication, scan the following QR code using your phone’s authenticator application or enter the setup key and provide the generated OTP code.": "若要完成啟用兩因素身份驗證，請使用手機的身份驗證器應用程式掃描以下二維碼，或輸入設定密鑰並提供產生的 OTP 代碼。",
     "Toggle navigation": "切換導航",
     "To hear their story": "來聽聽他們的故事",
     "Token Name": "Token 名稱",
@@ -1144,7 +1142,6 @@
     "updated the religion": "更新了宗教",
     "Update Password": "更新密碼",
     "Update your account's profile information and email address.": "更新您的帳號資料和電子郵件地址。",
-    "Update your account’s profile information and email address.": "更新您帳戶的個人資料資訊和電子郵件地址。",
     "Upload photo as avatar": "上傳照片作為頭像",
     "Use": "使用",
     "Use an authentication code": "使用驗證碼",
@@ -1198,7 +1195,7 @@
     "We’ll send an email to this email address that you will need to confirm before we can send notifications to this address.": "我們將向此電子郵件地址發送一封電子郵件，您需要確認該電子郵件，然後我們才能向此地址發送通知。",
     "What happens now?": "現在會發生什麼事？",
     "What is the loan?": "什麼是貸款？",
-    "What permission should :name have?": ":name 應該擁有什麼權限？",
+    "What permission should :name have?": ":Name 應該擁有什麼權限？",
     "What permission should the user have?": "使用者應該擁有什麼權限？",
     "Whatsapp": "Whatsapp",
     "What should we use to display maps?": "我們該用什麼來顯示地圖？",
